--- a/ai-lan/index.html
+++ b/ai-lan/index.html
@@ -179,7 +179,7 @@ Publicerat i <a href="https://lastoffer.net/category/lan/">lån</a>		</span>
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2023/09/ai-lan-1..webp" alt="Ai lån" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2023/09/ai-lan-1.webp" alt="Ai lån" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -685,7 +685,7 @@ button.bleu {
 <h2>
 <div class="unskew">Att få ett AI lån</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring: ai lån"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring: ai lån"></p>
 <p>    I en värld där teknologiska innovationer formar vår vardag är AI-lån en av de mest fascinerande framstegen inom finanssektorn.  Den banbrytande användningen av artificiell intelligens erbjuder oanade möjligheter, förvandlar hur vi ansöker om lån och hanterar våra ekonomiska åtaganden. </p>
 <p>    Genom att sammanfoga avancerad algoritmisk analys med användarvänliga plattformar, levererar AI-lån en snabb och effektiv lösning för dem som söker finansiering.  Slipp den tidiga osäkerheten och stressen i traditionella låneprocesser, och upptäck hur teknologin nu arbetar för att ge dig mer kontroll över din ekonomi. </p>
 <p>    Hur fungerar då denna revolutionerande typ av lån? Genom att noggrant analysera din ekonomiska situation kan långivare ge mer exakta bedömningar, även för dem med svagare kredithistorik.  Detta är särskilt relevant i vår tid, där många människor behöver flexibilitet och smidighet för att klara av sina ekonomiska ambitioner. </p>
@@ -754,7 +754,7 @@ button.bleu {
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med ai lån</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Positivt med ai lån"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Positivt med ai lån"></p>
 <ul>
 <li><strong>Snabbare ansökningsprocess:</strong> AI-lån erbjuder en betydligt snabbare ansökningsprocess jämfört med traditionella lån. Genom att automatisera dokumenthanteringen kan låntagare få beslut inom några minuter istället för dagar eller veckor.</li>
 <li><strong>Effektiv kreditbedömning:</strong> Med användning av avancerade algoritmer kan AI snabbt analysera en mängd olika data för att bedöma låntagares kreditvärdighet. Detta innebär att även personer med svagare kreditvärdighet kan få en mer korrekt bedömning, vilket ökar deras chanser att få lån.</li>
@@ -772,7 +772,7 @@ button.bleu {
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med ai lån</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Negativt med ai lån"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Negativt med ai lån"></p>
 <ul>
 <li><strong>Dataläckage och säkerhetsrisker:</strong> Användningen av AI i låneprocessen innebär att känslig information hanteras digitalt. Detta ökar risken för att personuppgifter läcker ut eller missbrukas om säkerhetsåtgärderna är otillräckliga.</li>
 <li><strong>Bias och orättvisa i kreditbedömningen:</strong>  AI-algoritmer baseras på historisk data, vilket kan resultera i oavsiktlig diskriminering av vissa grupper. Om den underliggande datan innehåller fördomar kan det leda till att vissa låntagare bedöms negativt utan giltig anledning.</li>
