--- a/aktielan/index.html
+++ b/aktielan/index.html
@@ -179,7 +179,7 @@ Publicerat i <a href="https://lastoffer.net/category/lan/">lån</a>		</span>
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2023/09/aktielan..webp" alt="Aktielån" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2023/09/aktielan.webp" alt="Aktielån" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -697,7 +697,7 @@ button.bleu {
 <h2>
 <div class="unskew">Att få aktielån</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring: aktielån"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring: aktielån"></p>
 <p>    I en ständigt föränderliga finansvärld är det avgörande att vara välutrustad med kunskap för att navigera på marknaderna.  En spännande och potentiellt lukrativ metod för att investera är genom aktielån. </p>
 <p> Detta koncept erbjuder investerare chansen att utnyttja lånat kapital för att öka sin avkastning och diversifiera sina portföljer.     För många kan aktielån vara en nyckelstrategi som hjälper dem att maximera sin investeringskapacitet. </p>
 <p> Genom att använda hävstång görs det möjligt att göra betydande affärer med begränsade resurser.  Men det finns också risker och fallgropar som är viktiga att beakta.     Dålig kreditvärdighet kan stå i vägen för livsviktiga lån, men det finns alltid alternativ. </p>
@@ -769,7 +769,7 @@ button.bleu {
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med aktielån</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Positivt med aktielån"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Positivt med aktielån"></p>
 <ul>
 <li><strong>Ökad köpkraft:</strong> Aktielån ger investerare möjlighet att låna kapital för att köpa fler aktier än vad de annars skulle ha råd med. Detta kan leda till större avkastning om investeringarna utvecklas positivt.</li>
 <li><strong>Flexibilitet:</strong> Med aktielån kan investerare anpassa sina investeringar efter marknadens förändringar. Denna anpassningsförmåga kan vara avgörande för att utnyttja snabbt uppkommande affärsmöjligheter.</li>
@@ -787,7 +787,7 @@ button.bleu {
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med aktielån</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Negativt med aktielån"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Negativt med aktielån"></p>
 <ul>
 <li><strong>Ökad risk:</strong> Att låna för att investera innebär alltid en högre risk, särskilt i en volatil marknad. Om de investeringar som gjorts med lånat kapital inte ger förväntad avkastning kan förlusterna bli betydande.</li>
 <li><strong>Räntekostnader:</strong> Lånat kapital kommer alltid med räntekostnader, som kan äta upp en stor del av vinsten. Om räntan överstiger avkastningen på investeringarna kan det leda till ekonomiska problem och kanske till och med en skuldspiral.</li>
