--- a/akutlan-utan-uc/index.html
+++ b/akutlan-utan-uc/index.html
@@ -180,7 +180,7 @@ Publicerat i <a href="https://lastoffer.net/category/utan-uc/">Utan UC</a>		</sp
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2024/08/akutlan-utan-uc-1..webp" alt="Akutlån utan uc" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2024/08/akutlan-utan-uc-1.webp" alt="Akutlån utan uc" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -885,7 +885,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <h2>
 <div class="unskew">Att få akutlån utan UC</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för akutlån utan UC"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för akutlån utan UC"></p>
 <p>Vi är nog alla bekanta med att problem med ekonomin kan uppstå plötsligt, och att tillgången till snabba finansiella lösningar ibland är helt avgörande för att låsa situationen.  Kanske står du just nu inför en akut situation där du behöver pengar snabbt, &#8211; det är här det populära akutlånet utan UC kan komma väl till pass. </p>
 <p> Dessa lån erbjuder en välkommen väg ut ur trångmål utan att bli begränsad av traditionella kreditvärderingar.     Vad som särskiljer akutlån utan uc är möjligheten att få medel utan en kreditupplysning vecka från UC. </p>
 <p> Istället får du chansen att visa din återbetalningsförmåga genom andra metoder, vilket ger låntagare med varierande bakgrunder en möjlighet att få låna.     Utbetalningarna går ofta snabbt och effektivt, och i bästa fall kan pengarna te sig på ditt konto inom minuter. </p>
@@ -951,7 +951,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med akutlån utan UC</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med akutlån utan UC"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med akutlån utan UC"></p>
 <ul>
 <li>Snabb tillgång till medel: Akutlån utan UC erbjuder en snabb lösning för oväntade utgifter. Du kan få pengarna på kontot inom några minuter, vilket är ovärderligt i akuta situationer.</li>
 <li>Ingen kreditupplysning från UC: Genom att undvika traditionell kreditprövning behåller du din kreditvärdighet intakt. Detta är särskilt fördelaktigt för dem med tidigare kreditproblem eller låg kreditvärdighet.</li>
@@ -969,7 +969,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med akutlån utan UC</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med akutlån utan UC"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med akutlån utan UC"></p>
 <ul>
 <li>Högre räntor: Akutlån utan UC tenderar att ha högre räntor än traditionella lån. Detta beror på den ökade risken som långivare tar när de ger lån till personer med lägre kreditvärdighet.</li>
 <li>Kostnader för avgifter: Utöver räntan kan det tillkomma olika avgifter för att få lånet beviljat. Dessa kostnader kan snabbt öka den totala summan som ska återbetalas.</li>
