--- a/ansokningsprocess/index.html
+++ b/ansokningsprocess/index.html
@@ -178,7 +178,7 @@ Publicerat i <a href="https://lastoffer.net/category/hjalp-tips/">hjälp &amp; t
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2023/05/ansokningsprocess-lan..webp" alt="Ansökningsprocess för lån" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2023/05/ansokningsprocess-lan.webp" alt="Ansökningsprocess för lån" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 	
@@ -500,7 +500,7 @@ window.addEventListener(
 <h2>
 <div class="unskew">Effektiv väg till låneansökan</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för låneansökningsprocessen"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för låneansökningsprocessen"></p>
 <p><p>Att navigera genom låneansökningsprocessen kan kännas överväldigande, men med rätt insikt och förberedelse kan du finna den trygghet som krävs för att göra ett välinformerat val.  </p>
 <blockquote><p>En genomtänkt plan är nyckeln till ekonomisk framgång</p></blockquote>
 <p>”</p></blockquote>
@@ -633,7 +633,7 @@ window.addEventListener(
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Få fördelar i din låneansökan</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med låneansökan"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med låneansökan"></p>
 <ul>
 <li><strong>Kolla in alternativ:</strong> Genom att jämföra flera långivare kan låntagare hitta det mest fördelaktiga lånet som passar deras specifika behov. Detta ökar möjligheten att få bättre räntor och villkor jämfört med att ansöka hos en enskild långivare.</li>
 <li><strong>Få snabbare beslutsprocess:</strong> Många långivare erbjuder snabba svar på låneansökningar, vilket gör det möjligt för låntagare att få besked inom kort. Denna effektivitet kan vara avgörande vid akuta ekonomiska behov.</li>
@@ -651,7 +651,7 @@ window.addEventListener(
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Undvik nackdelar i låneansökan</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med låneansökan"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med låneansökan"></p>
 <ul>
 <li><strong>Komplex process:</strong> Trots att låneansökan kan verka enkel, finns det flera steg som kan kännas överväldigande. Det krävs noggrannhet och uppmärksamhet på detaljer för att säkerställa att all nödvändig information är korrekt och fullständig.</li>
 <li><strong>Kostnader och avgifter:</strong> Många lån kan inkludera dolda avgifter som uppläggningsavgifter eller aviavgifter. Dessa kostnader kan addresseras till lånets totala utgift, vilket gör det viktigare än någonsin att jämföra erbjudanden noggrant.</li>
