--- a/app/index.html
+++ b/app/index.html
@@ -678,7 +678,7 @@ button.bleu {
 </h2>
 </div>
 <div class="cell">
-<img decoding="async" style="width: 30px; height: 30px; margin: 5px; padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"    src="../media/glodlampa..webp" alt="Förklaring: så lånar man pengar med app" /></p>
+<img decoding="async" style="width: 30px; height: 30px; margin: 5px; padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"    src="../media/glodlampa.webp" alt="Förklaring: så lånar man pengar med app" /></p>
 <p>Att <strong>låna pengar via app</strong> är ett smidigt och smart sätt att få snabba kontanter på. Digitala lösningar för transaktioner och lån är en växande gren inom Fintech och många nya innovationer kommer från Sverige.</p>
 <p>Att ta ett lån med en mobilapp funkar via mobil telefon eller surfplatta</p>
 <p>Så här går det till:</p>
