--- a/arslan/index.html
+++ b/arslan/index.html
@@ -180,7 +180,7 @@ Ett årslån är ett lån med en återbetalningstid på upp till ett år. </p>
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2016/11/Arslan-12-manaders-lan..webp" alt="Årslån – Flexibla 12 månaders lån" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2016/11/Arslan-12-manaders-lan.webp" alt="Årslån – Flexibla 12 månaders lån" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -886,7 +886,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <h2>
 <div class="unskew">Flexibla lånalternativ för din ekonomi.</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för årslån 12 månader"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för årslån 12 månader"></p>
 <p>    Att navigera i den ekonomiska djungeln kan vara en utmaning, särskilt när oförutsedda utgifter oväntat dyker upp.     </p>
 <blockquote><p>Möjligheter är ofta dolda bakom osäkerhet</p></blockquote>
 <p> årslån erbjuder en smidig lösning för dem som söker flexibilitet och anpassningsförmåga under en tolvmånadersperiod. </p>
@@ -1156,7 +1156,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med årslån i 12 månader</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med årslån i 12 månader"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med årslån i 12 månader"></p>
 <ul>
 <li><strong>Flexibilitet i återbetalning:</strong> Årslån erbjuder möjligheten att justera återbetalningsplanen baserat på individuella ekonomiska behov. Detta innebär att du kan hantera oförutsedda utgifter och andra finansiella åtaganden med större lätthet.</li>
 <li><strong>Ingen säkerhet krävs:</strong> Många årslån är utan krav på säkerhet, vilket gör dem tillgängliga för fler låntagare. Detta innebär att du slipper riskera din egendom eller tillgångar för att få ett lån, vilket ger en ökad trygghet.</li>
@@ -1174,7 +1174,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med årslån 12 månader</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med årslån 12 månader"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med årslån 12 månader"></p>
 <ul>
 <li><strong>Högre räntor:</strong> Årslån kan ha högre räntor än traditionella banklån, vilket gör att den totala kostnaden kan bli högre. Detta kan vara en av de avgörande faktorerna varför det är viktigt att noga jämföra räntor innan du väljer ett lån.</li>
 <li><strong>Möjliga dolda avgifter:</strong> Vissa långivare kan ta ut dolda avgifter som inte tydligt anges i lånevillkoren. Detta kan leda till oönskade överraskningar och skapa förvirring kring den faktiska kostnaden för lånet.</li>
