--- a/aterbetalningsplan/index.html
+++ b/aterbetalningsplan/index.html
@@ -179,7 +179,7 @@ Publicerat i <a href="https://lastoffer.net/category/hjalp-tips/">hjälp &amp; t
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2023/05/aterbetalningsplan..webp" alt="Återbetalningsplan lån" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2023/05/aterbetalningsplan.webp" alt="Återbetalningsplan lån" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 	
@@ -501,7 +501,7 @@ window.addEventListener(
 <h2>
 <div class="unskew">Smart strategi för låneåterbetalning</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för återbetalningsplan lån"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för återbetalningsplan lån"></p>
 <p><p>I den finansiella djungeln av lån och krediter är en genomtänkt återbetalningsplan av yttersta vikt.  När du överväger att ta ett lån, är det med stor betydelse att du förstår alla aspekter av hur ditt åtagande kommer att påverka din ekonomiska framtid. </p>
 <blockquote><p>En väl utarbetad plan är nyckeln till ekonomisk trygghet</p></blockquote>
 <p>Återbetalningstiden kan variera kraftigt beroende på lånetyp och långivarens villkor, vilket gör det viktigt att noggrant överväga dina alternativ. </p>
@@ -713,7 +713,7 @@ window.addEventListener(
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Dra fördelar av återbetalningsplan</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med återbetalningsplan lån"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med återbetalningsplan lån"></p>
 <ul>
 <li><strong>Ekonomisk översikt:</strong> En tydlig återbetalningsplan ger en konkret bild av de månatliga kostnaderna. Detta hjälper låntagaren att planera sin ekonomi och undvika plötsliga överraskningar som kan påverka budgeten negativt.</li>
 <li><strong>Minimerad risk för skuldproblem:</strong> Genom att ha koll på månatliga betalningar minimeras risken för att hamna i överdriven skuldsättning. En planerad återbetalning ger trygghet och förmåga att hantera eventuella framtida ekonomiska påfrestningar.</li>
@@ -731,7 +731,7 @@ window.addEventListener(
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Undvik nackdelar återbetalningsplan</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med återbetalningsplan lån"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med återbetalningsplan lån"></p>
 <ul>
 <li><strong>Ökade räntekostnader:</strong> En längre återbetalningstid kan leda till högre totala räntekostnader. Ju längre tid du har lånet, desto mer ränta kommer du att betala på den utestående skulden.</li>
 <li><strong>Risk för ekonomisk överbelastning:</strong> Om din budget inte är realistiskt planerad kan det leda till betalningssvårigheter. Om återbetalningstiden är för lång kan månatliga avgifter bli en börda som påverkar andra ekonomiska åtaganden.</li>
