--- a/bast-lan/index.html
+++ b/bast-lan/index.html
@@ -179,7 +179,7 @@ Publicerat i <a href="https://lastoffer.net/category/lan/">lån</a>		</span>
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2023/05/bast-lan..webp" alt="Bäst lån - testvinnare" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2023/05/bast-lan.webp" alt="Bäst lån - testvinnare" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -686,7 +686,7 @@ button.bleu {
 <h2>
 <div class="unskew">Bästa lånet för dina behov</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för bästa lån val"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för bästa lån val"></p>
 <p><p>Att navigera i den komplicerade världen av lån kan ibland kännas som en utmanande berg-och-dalbana.  Med ett överflöd av alternativ är det avgörande att hitta det perfekta lånet som uppfyller just dina behov. </p>
 <blockquote><p>Det kloka valet av lån ger frihet att förverkliga drömmar</p></blockquote>
 <p> Med så många långivare och deras olika erbjudanden kan det lätt bli förvirrande att veta var man ska börja. </p>
@@ -831,7 +831,7 @@ button.bleu {
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med bästa lånen</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med bästa lånen"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med bästa lånen"></p>
 <ul>
 <li><strong>Konkurrenskraftiga räntor:</strong> Låneprodukter som erbjuds av testvinnare har ofta mycket låga räntor, vilket minskar den totala lånekostnaden. Detta gör det mer ekonomiskt fördelaktigt att låna pengar, särskilt vid längre återbetalningstider.</li>
 <li><strong>Transparenta villkor:</strong> Många långivare erbjuder tydlig och lättförståelig information om låneavtalen. Detta gör att låntagare kan fatta välgrundade beslut utan att behöva oroa sig för dolda avgifter.</li>
@@ -849,7 +849,7 @@ button.bleu {
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med bästa lånen</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med bästa lånen"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med bästa lånen"></p>
 <ul>
 <li><strong>Höga avgifter:</strong> Vissa långivare har dolda eller högre avgifter som kan öka den totala kostnaden för lånet. Det är viktigt att noggrant läsa igenom avtalet för att undvika obehagliga överraskningar under återbetalningstiden.</li>
 <li><strong>Kort återbetalningstid:</strong> Många snabblån har relativt korta återbetalningstider, vilket kan leda till högre månatliga betalningar. Denna situation kan bli stressande för låntagare som redan har begränsad ekonomisk flexibilitet.</li>
