--- a/basta-snabblanet/index.html
+++ b/basta-snabblanet/index.html
@@ -180,7 +180,7 @@ Publicerat i <a href="https://lastoffer.net/category/snabblan/">snabblån</a>		<
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2023/01/basta-snabblanet..webp" alt="Bästa snabblånet – bäst i test" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2023/01/basta-snabblanet.webp" alt="Bästa snabblånet – bäst i test" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -898,7 +898,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <h2>
 <div class="unskew">Säkra ditt snabblån med omsorg</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för snabblån i test"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för snabblån i test"></p>
 <p><p>I dagens snabba samhälle, där oväntade utgifter kan dyka upp när som helst, blir snabblån en värdefull resurs.  Men hur navigerar man i djungeln av alternativ? Genom att vara medveten om vad som erbjuds kan låntagare hitta det perfekta lånet som passar deras specifika behov. </p>
 <blockquote><p>Rätt lån vid rätt tidpunkt kan förändra din ekonomiska situation</p></blockquote>
 <p>Att välja det mest fördelaktiga snabblånet beror på en mängd faktorer, inklusive räntor, återbetalningsvillkor och utbetalningstider. </p>
@@ -1015,7 +1015,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med snabblån i test</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med snabblån i test"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med snabblån i test"></p>
 <ul>
 <li><strong>Snabb utbetalning:</strong> Snabblån erbjuder oftast direktutbetalning, vilket innebär att du kan få pengarna på ditt konto inom några minuter efter godkänd ansökan. Detta är särskilt fördelaktigt vid akuta behov, som plötsliga medicinska kostnader eller oväntade reparationer.</li>
 <li><strong>Enkel ansökningsprocess:</strong> Många långivare har förenklat ansökningsförfarandet så att det kan göras online med några klick. Du behöver sällan mer än grundläggande information, vilket gör det snabbt och smidigt att ansöka när du behöver pengar.</li>
@@ -1033,7 +1033,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med snabblån i test</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med snabblån i test"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med snabblån i test"></p>
 <ul>
 <li><strong>Höga räntor:</strong> Snabblån har ofta betydligt högre räntor jämfört med traditionella lån. Denna kostnad kan snabbt bli en ekonomisk börda om låntagaren inte är noga med att hantera återbetalningarna.</li>
 <li><strong>Korta återbetalningstider:</strong> Många snabblån har mycket korta återbetalningstider, vilket kan leda till pressade ekonomiska situationer. Om du inte är beredd kan det leda till att du hamnar i en skuldspiral.</li>
