--- a/betalningsformaga/index.html
+++ b/betalningsformaga/index.html
@@ -177,7 +177,7 @@ Publicerat i <a href="https://lastoffer.net/category/hjalp-tips/">hjälp &amp; t
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2023/05/betalningsformaga-lan..webp" alt="Betalningsförmåga för lån" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2023/05/betalningsformaga-lan.webp" alt="Betalningsförmåga för lån" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 	
@@ -499,7 +499,7 @@ window.addEventListener(
 <h2>
 <div class="unskew">Nyckeln till ekonomisk trygghet</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för betalningsförmåga."></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för betalningsförmåga."></p>
 <p><p>Att navigera i låneprocessens snåriga värld kan kännas både utmanande och skrämmande.  För många är termen &#8221;betalningsförmåga&#8221; en central aspekt av denna resa, en avgörande faktor som långivare väger tungt. </p>
 <blockquote><p>En solid betalningsförmåga är nyckeln till en trygg och stabil ekonomisk framtid</p></blockquote>
 <p>Det handlar inte bara om att ha bra inkomster; det rör sig också om en djupgående analys av ens utgifter och livsomständigheter. </p>
@@ -681,7 +681,7 @@ window.addEventListener(
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med god betalningsförmåga</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med betalningsförmåga"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med betalningsförmåga"></p>
 <ul>
 <li>
         Ökad låneansökningsframgång: En solid betalningsförmåga ökar chansen att få lån beviljade. Långivare ser på en stark ekonomisk bakgrund som ett tecken på ansvar och förmåga att hantera skulder.
@@ -719,7 +719,7 @@ window.addEventListener(
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med dålig betalningsförmåga</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med betalningsförmåga"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med betalningsförmåga"></p>
 <ul>
 <li>
         Begränsad lånekapacitet: Om din betalningsförmåga är svag kan långivare vara ovilliga att bevilja större lån. Detta begränsar dina möjligheter att finansiera viktiga investeringar, som bostad eller bil, vilket kan påverka din livsstil negativt.
