--- a/betalningsfria-manader-pa-lan/index.html
+++ b/betalningsfria-manader-pa-lan/index.html
@@ -179,7 +179,7 @@ Publicerat i <a href="https://lastoffer.net/category/hjalp-tips/">hjälp &amp; t
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2023/07/betalningsfria-manader-lan..webp" alt="Betalningsfria månader på lån" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2023/07/betalningsfria-manader-lan.webp" alt="Betalningsfria månader på lån" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -858,7 +858,7 @@ Räntan är fast och sätts individuellt efter kreditprövning: 9,84-21,60%. Exe
 <h2>
 <div class="unskew">Strategi för ekonomisk flexibilitet</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för betalningsfria månader"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för betalningsfria månader"></p>
 <p><p>Ekonomiska avbrott och oväntade utgifter kan ofta kasta oss in i kaos.  I sådana stunder kan en betalningsfri månad framstå som ett värdefullt alternativ.  </p>
 <blockquote><p>I varje storm finns en möjlighet att navigera mot lugnet</p></blockquote>
 <p> Denna tjänst, som erbjuds av många långivare, ger dig en chans att andas ut med lättnad. </p>
@@ -984,7 +984,7 @@ Räntan är fast och sätts individuellt efter kreditprövning: 9,84-21,60%. Exe
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med betalningsfri månad</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med betalningsfri månad"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med betalningsfri månad"></p>
 <ul>
 <li><strong>Ekonomisk lättnad:</strong> Betalningsfria månader ger låntagare möjlighet att skjuta upp betalningar, vilket kan vara värdefullt vid oväntade utgifter. Att kunna avvara månatliga betalningar under en kort period skapar ett andrum i ekonomin.</li>
 <li><strong>Flexibilitet:</strong> Med möjligheten till betalningsfria månader kan låntagare anpassa sina utgifter efter situationens krav. Detta gör det lättare att hantera säsongsvariationer i inkomster eller plötsliga kostnader.</li>
@@ -1002,7 +1002,7 @@ Räntan är fast och sätts individuellt efter kreditprövning: 9,84-21,60%. Exe
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med betalningsfri månad</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med betalningsfri månad"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med betalningsfri månad"></p>
 <ul>
 <li><strong>Ökad skuld:</strong> Även om månadens betalningar skjuts upp, fortsätter räntan att ackumuleras. Detta kan leda till en ökning av den totala skulden, vilket i sin tur gör framtida betalningar mer betungande.</li>
 <li><strong>Kostnader i efterhand:</strong> När en betalningsfri månad utnyttjas kan de uppskjutna beloppen läggas till nästa månadskostnad. Detta kan skapa en överraskande finansiell belastning i efterföljande månader, vilket många låntagare inte förbereder sig på.</li>
