--- a/billan-med-dalig-uc/index.html
+++ b/billan-med-dalig-uc/index.html
@@ -167,7 +167,7 @@ Publicerat i <a href="https://lastoffer.net/category/lan/">lån</a>		</span>
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2016/07/billan-med-dalig-uc..webp" alt="Billån med dålig UC" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2016/07/billan-med-dalig-uc.webp" alt="Billån med dålig UC" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -871,7 +871,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <h2>
 <div class="unskew">Billån trots dålig kreditvärdighet</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för billån utan UC"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för billån utan UC"></p>
 <p><p>Att navigera genom labyrinten av billån kan ofta kännas som en svår utmaning, särskilt om din kreditvärdighet inte sjunger på bästa ton.  Många har tidigare fått avslag på sina ansökningar på grund av svag UC-historik, vilket kan kännas både frustrerande och inhiberande för dina drömmar om att skaffa en bil. </p>
 <p> Men det finns ljusglimtar även i denna värld av restriktioner.     </p>
 <blockquote><p>Hinder på vägen är bara en möjlighet för den som är villiga att kämpa</p></blockquote>
@@ -1011,7 +1011,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med billån utan UC</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med billån utan UC"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med billån utan UC"></p>
 <ul>
 <li>Ökad chans till lån: Billån utan UC erbjuder fler möjligheter för personer med svag kreditvärdighet. Genom att välja långivare som bedömer kreditvärdighet på andra sätt kan fler låntagare få godkännande.</li>
 <li>Skyddad kreditvärdighet: Långivare som inte använder UC gör att dina tidigare anmärkningar inte påverkar din framtida ansökan. Detta kan vara avgörande för dem som har drabbats av flera avslag.</li>
@@ -1029,7 +1029,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med billån utan UC</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med billån utan UC"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med billån utan UC"></p>
 <ul>
 <li>Högre räntor: Långivare som erbjuder lån utan UC tenderar att ta ut högre räntor för att kompensera den ökade risken. Detta kan göra att den totala kostnaden för lånet blir betydligt högre jämfört med traditionella lån.</li>
 <li>Kortare återbetalningstider: Många långivare kan erbjuda kortare återbetalningstider på lån utan UC, vilket kan innebära högre månatliga betalningar. Detta kan belasta låntagarens ekonomi och göra det svårare att hantera lånet på lång sikt.</li>
