--- a/billiga-lan-utan-uc/index.html
+++ b/billiga-lan-utan-uc/index.html
@@ -179,7 +179,7 @@ Publicerat i <a href="https://lastoffer.net/category/utan-uc/">Utan UC</a>		</sp
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2024/08/billiga-lan-utan-uc..webp" alt="Billiga lån utan UC" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2024/08/billiga-lan-utan-uc.webp" alt="Billiga lån utan UC" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -843,7 +843,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <h2>
 <div class="unskew">Att få Lån utan UC enkelt.</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för Lån utan UC."></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för Lån utan UC."></p>
 <p>Vi vet att ekonomiska utmaningar uppstå när som helst, och så det kan vara avgörande att du får  tillgång till snabb och billig finansiering utan att det trycker ner ditt UC betyg.  Om du fått oväntade utgifter, kan ett billigt lån utan UC vara en idealisk lösning för att hantera situationen. </p>
 <p> Dessa lånealternativ gör det möjligt för dig att få kapital utan att det påverkar din kreditvärdighet negativt.     Många människor är bekymrade över traditionella låneprocesser som ofta är komplicerade och tidskrävande. </p>
 <p> Genom att välja lån utan UC slipper du hämmande upplysningar som kan påverka din framtida lånemöjlighet.  Istället för att fastna i byråkratiska hinder, kan du fokusera på att lösa dina ekonomiska bekymmer direkt. </p>
@@ -919,7 +919,7 @@ Vi vet ab erfarenhet att utan UC kan vara avgörande för att många låntagare 
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med billiga lån utan UC</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med billiga lån utan UC"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med billiga lån utan UC"></p>
 <ul>
 <li>Snabb handläggning: Lån utan UC erbjuder oftast snabbare godkännandeprocesser, vilket innebär att du kan få tillgång till behövligt kapital utan onödig försening. Detta är särskilt viktigt när oväntade kostnader dyker upp och du behöver pengar omedelbart.</li>
 <li>Ingen påverkan på kreditvärdigheten: Eftersom dessa lån inte involverar UC-kreditupplysningar riskerar du inte att påverka din kreditprofil negativt. Detta gör det enklare för dig att ansöka om flera lån utan att oroa dig för att din kreditvärdighet ska försämras.</li>
@@ -937,7 +937,7 @@ Vi vet ab erfarenhet att utan UC kan vara avgörande för att många låntagare 
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med billiga lån utan UC</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med billiga lån utan UC"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med billiga lån utan UC"></p>
 <ul>
 <li>Höga räntor: Lån utan UC har ofta högre räntor jämfört med traditionella lån, vilket kan resultera i betydande kostnader över tid. Detta kan göra det mindre ekonomiskt fördelaktigt om du inte kan betala tillbaka lånet snabbt.</li>
 <li>Kostnadsfällor: Många av dessa lån kan klassas som högkostnadskrediter, vilket innebär att avgifterna kan vara obehagligt höga. Om du inte är noga med att läsa villkoren kan du lätt hamna i en situation där kostnaderna skenar.</li>
