--- a/billiga-lan/index.html
+++ b/billiga-lan/index.html
@@ -181,7 +181,7 @@ Publicerat i <a href="https://lastoffer.net/category/lan/">lån</a>		</span>
 <div class="row">
 </div>
 <div class="row">
-<div class="cell right"><img fetchpriority="high" decoding="async" src="../media/2014/04/billiga-lan..webp" alt="Låna pengar billigt" width="300" height="300" /></div>
+<div class="cell right"><img fetchpriority="high" decoding="async" src="../media/2014/04/billiga-lan.webp" alt="Låna pengar billigt" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -647,7 +647,7 @@ button.bleu {
 }</script>   </p>
 <div class="row">
 <div class="cell">
-<p><img decoding="async" style="width: 30px; height: 30px; margin: 5px; padding: 10px; background: #e8e8e8; border-radius: 100%/10px 10px 10px 10px;" src="../media/glodlampa..webp" alt="Förklaring: Billiga lån" /></p>
+<p><img decoding="async" style="width: 30px; height: 30px; margin: 5px; padding: 10px; background: #e8e8e8; border-radius: 100%/10px 10px 10px 10px;" src="../media/glodlampa.webp" alt="Förklaring: Billiga lån" /></p>
 <p>Enligt vår erfarenhet har ett billigt och bra lån med gynnsamma villkor ofta ett <a href="https://lastoffer.net/lan-med-hogst-trustpilot-betyg/">lån med högt betyg hos Trustpilot</a>.</p>
 <p>Här är några viktiga punkter som du behöver pricka av;.</p>
 <ul>
@@ -813,7 +813,7 @@ Ränta: En låg ränta är viktig, men den är inte den enda faktorn. Andra avgi
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med billiga lån</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Positivt med billiga lån med låg ränta"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Positivt med billiga lån med låg ränta"></p>
 <ol>
 <li><strong>Hållbara kostnader:</strong> Ett lågprislån med låg ränta innebär att dina månadskostnader hålls på en rimlig nivå, vilket gör det enklare att balansera budgeten utan att känna dig ekonomiskt tyngd.</li>
 <li><strong>Effektiv skuldbetalning:</strong> Med lägre räntor går en större del av din betalning direkt till att minska huvudskulden, vilket gör att du snabbare kan bli skuldfri utan att behöva gräva djupare i plånboken.</li>
@@ -831,7 +831,7 @@ Ränta: En låg ränta är viktig, men den är inte den enda faktorn. Andra avgi
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med billiga lån</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Negativt med billiga lån med låg ränta"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Negativt med billiga lån med låg ränta"></p>
 <ol>
 <li><strong>Strikta kvalifikationskrav:</strong> Lågprislån med låga räntor erbjuds ofta endast till dem med utmärkt kreditvärdighet, vilket kan göra det svårt för vissa låntagare att kvalificera sig.</li>
 <li><strong>Begränsat lånebelopp:</strong> Lån med lägre räntor kan komma med restriktioner på hur mycket du kan låna, vilket kanske inte alltid räcker för att täcka större ekonomiska behov.</li>
