--- a/billige-refinansieringslan/index.html
+++ b/billige-refinansieringslan/index.html
@@ -180,7 +180,7 @@ Publicerat i <a href="https://lastoffer.net/category/lane-penger/">låne penger<
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2024/11/refinansieringslan..webp" alt="Billige refinansieringslån" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2024/11/refinansieringslan.webp" alt="Billige refinansieringslån" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 	
@@ -502,7 +502,7 @@ window.addEventListener(
 <h2>
 <div class="unskew">Nøkkelen til smartere økonomi</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Forklaring for refinansiering av lån"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Forklaring for refinansiering av lån"></p>
 <p><p>I en verden av stadig økende kostnader og uforutsigbare økonomiske utfordringer er det viktigere enn noen gang å finne kloke løsninger for å oppnå økonomisk stabilitet.  </p>
 <blockquote><p>Smartere valg i dag skaper frihet for i morgen</p></blockquote>
 <p> Med dette i bakhodet kan billig refinansiering bli din beste venn på veien mot lavere gjeld og bedre økonomiske betingelser. </p>
@@ -668,7 +668,7 @@ window.addEventListener(
 <div class="row forulempe">
 <div class="cell positiv">
 <h3>Fordeler med billige refinansieringslån</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fordeler med billige refinansieringslån"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fordeler med billige refinansieringslån"></p>
 <ul>
 <li><strong>Reduserte rentekostnader:</strong> Når du refinansierer, kan du bytte til lån med lavere rente. Dette betyr at du potensielt kan spare betydelige beløp over tid, noe som kan gi mer rom i budsjettet ditt.</li>
 <li><strong>Samling av gjeld:</strong> Refinansiering gir deg muligheten til å samle flere lån og kreditter til ett enkelt lån. Dette forenkler ikke bare betalingsprosessen, men gir også bedre oversikt over hva som må tilbakebetales.</li>
@@ -686,7 +686,7 @@ window.addEventListener(
 <div class="row forulempe">
 <div class="cell negativ">
 <h3>Ulemper med billige refinansieringslån</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Ulemper med billige refinansieringslån"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Ulemper med billige refinansieringslån"></p>
 <ul>
 <li><strong>Kostnader knyttet til refinansiering:</strong> Refinansiering kan medføre gebyrer og kostnader ovenfor långiver, inkludert søknadsgebyrer eller etableringsgebyrer. Disse kostnadene kan redusere innsparingene du oppnår fra lavere rente, så det er viktig å vurdere om det er verdt det.</li>
 <li><strong>Ingen garanti for lavere rente:</strong> Til tross for hensikten om å oppnå bedre betingelser, er det ikke alltid mulig å få lavere rente ved refinansiering. Markedet kan endre seg, og din kredittverdighet kan påvirke hvilken rente du faktisk får tilbudt.</li>
