--- a/blancolan/index.html
+++ b/blancolan/index.html
@@ -180,7 +180,7 @@ Ett blancolån med låg ränta är ett lån utan säkerhet där du får låna pe
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2023/08/blancolan-med-lag-ranta..webp" alt="Blancolån med låg ränta" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2023/08/blancolan-med-lag-ranta.webp" alt="Blancolån med låg ränta" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -687,7 +687,7 @@ button.bleu {
 <h2>
 <div class="unskew">Blancolån för ekonomisk frihet</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för blancolån utan säkerhet"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för blancolån utan säkerhet"></p>
 <p><p>Att navigera i djungeln av finansiella alternativ kan kännas överväldigande, men blancolån med låg ränta erbjuder en bejublad lösning för den som strävar efter ekonomisk frihet.  Dessa lån, vilka inte kräver säkerhet, ger låntagare möjligheten att förena tidigare skulder och optimera sina månadskostnader. </p>
 <blockquote><p>Ekonomisk stabilitet är grunden för trygghet i livet</p></blockquote>
 <p>Med ett blancolån kan du effektivt samla dyra smålån och krediter under ett paraply, vilket inte bara underlättar förvaltningen av din ekonomi, utan även ger dig en chans till en mer överkomlig ränta. </p>
@@ -827,7 +827,7 @@ button.bleu {
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med blancolån</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med blancolån"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med blancolån"></p>
 <ul>
 <li><strong>Ingen säkerhet krävs:</strong> Blancolån är helt utan krav på säkerhet, vilket innebär att du inte behöver riskera dina tillgångar, såsom bostäder eller bilar, för att få lånet beviljat. Detta ger dig en trygghet och frihet att låna pengar utan att oroa dig för att förlora värdefulla tillgångar.</li>
 <li><strong>Flexibilitet i användning:</strong> Med ett blancolån kan du använda medlen för ett brett spektrum av ändamål, oavsett om det handlar om renovering av hemmet, en oväntad reparation eller finansiering av en drömresa. Denna mångsidighet gör att lånet kan anpassas efter dina specifika behov.</li>
@@ -845,7 +845,7 @@ button.bleu {
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med blancolån</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med blancolån"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med blancolån"></p>
 <ul>
 <li><strong>Högre räntor jämfört med bolån:</strong> Blancolån tenderar att ha högre räntor än bolån, vilket kan leda till ökade kostnader för låntagaren. Detta kan bli särskilt påtagligt om lånet löper under en längre period, där de extra räntorna kan ackumuleras avsevärt.</li>
 <li><strong>Rörlig ränta:</strong> Många blancolån kommer med rörlig ränta, vilket innebär att kostnaderna kan förändras över tid beroende på marknadsförhållanden. Detta kan skapa osäkerhet i din budget och göra det svårare att planera dina framtida utgifter.</li>
