--- a/brollopslan/index.html
+++ b/brollopslan/index.html
@@ -178,7 +178,7 @@ Publicerat i <a href="https://lastoffer.net/category/lan/">lån</a>		</span>
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2023/09/brollopslan-1..webp" alt="Bröllopslån" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2023/09/brollopslan-1.webp" alt="Bröllopslån" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -696,7 +696,7 @@ button.bleu {
 <h2>
 <div class="unskew">Att få ett bröllopslån</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring: bröllopslån"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring: bröllopslån"></p>
 <p>Att planera ett bröllop är en magisk tid i livet, fylld av förväntan och glädje.  Det kan dock innebära betydande kostnader och ekonomiska utmaningar, vilket gör att många blivande makar överväger alternativ som bröllopslån. </p>
 <p> Att använda ett lån för att finansiera sin drömvigsel kan kännas som en attraktiv väg att gå, särskilt när önskelistan för det perfekta bröllopet verkar oändlig. För många par kan det vara svårt att spara de nödvändiga medlen för att täcka alla bröllopsutgifter. </p>
 <p> Från platser och catering till klänningar och dekorationer – kostnaderna kan snabbt skena iväg.  Här kan ett lån för bröllop visa sig vara en lösning, som gör det möjligt att snabbt få den kapitalinsats som behövs för att boka viktiga tjänster. </p>
@@ -764,7 +764,7 @@ button.bleu {
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med bröllopslån</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Positivt med bröllopslån"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Positivt med bröllopslån"></p>
 <ul>
 <li>Enkel tillgång till nödvändiga medel.<br />
         Bröllopslån ger par möjligheten att snabbt få de pengar de behöver för att täcka oväntade kostnader. Med en snabb och smidig ansökningsprocess kan ni snabbt säkra er finansiering för att ro hem den perfekta bröllopsplaneringen.</li>
@@ -792,7 +792,7 @@ button.bleu {
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med bröllopslån</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Negativt med bröllopslån"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Negativt med bröllopslån"></p>
 <ul>
 <li>Räntorna kan bli höga över tid.<br />
         Bröllopslån kan leda till att ni betalar mycket mer än ursprungligt lånat belopp om ni inte planerar noggrant. Om ni inte är försiktiga kan räntekostnaderna snabbt öka och skapa en ekonomisk börda längre fram.</li>
