--- a/cashlan/index.html
+++ b/cashlan/index.html
@@ -180,7 +180,7 @@ Publicerat i <a href="https://lastoffer.net/category/snabblan/">snabblån</a>		<
 <div class="row">
 </div>
 <div class="row">
-<div class="cell right"><img fetchpriority="high" decoding="async" class="alignnone size-full wp-image-10570" src="../media/2024/09/cash-lan..webp" alt="Låna cash" width="300" height="300" /></div>
+<div class="cell right"><img fetchpriority="high" decoding="async" class="alignnone size-full wp-image-10570" src="../media/2024/09/cash-lan.webp" alt="Låna cash" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <div>
