--- a/creditsafe-kreditupplysning/index.html
+++ b/creditsafe-kreditupplysning/index.html
@@ -180,7 +180,7 @@ Publicerat i <a href="https://lastoffer.net/category/lan/">lån</a>		</span>
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2023/08/creditsafe-lan..webp" alt="Lån med Creditsafe" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2023/08/creditsafe-lan.webp" alt="Lån med Creditsafe" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -782,7 +782,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <h2>
 <div class="unskew">Låt inte ditt kreditbetyg hindra dig</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för lån med Creditsafe"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för lån med Creditsafe"></p>
 <p><p>I en värld där finansiell flexibilitet står i fokus, framträder Creditsafe som en föregångare inom kreditlösningar.  Är du trött på traditionella upplysningar som påverkar din kreditvärdighet negativt? Med Creditsafe kan du navigera i lån på ett sätt som gynnar dig. </p>
 <blockquote><p>Kreditlösningar som skyddar din ekonomiska integritet och främjar tillväxt</p></blockquote>
 <p>Genom att erbjuda kreditupplysningar utan de vanliga konsekvenserna, skapar Creditsafe en unik väg till snabblån och flexibla avtalsvillkor. </p>
@@ -916,7 +916,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med lån via Creditsafe</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med Lån via Creditsafe"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med Lån via Creditsafe"></p>
 <ul>
 <li><strong>Ingen negativ påverkan på kreditvärdigheten:</strong> Lån med Creditsafe innebär att kreditupplysningar som görs inte registreras hos UC, vilket skyddar din kreditprofil. Du kan ansöka om flera lån utan att oroa dig för att din kreditvärdighet ska minska.</li>
 <li><strong>Flexibla lånebelopp:</strong> Creditsafe erbjuder lån från 1 000 kr upp till 50 000 kr, anpassade efter dina individuella behov. Oavsett om du behöver ett litet smslån eller ett större belopp, finns det alternativ som passar dig.</li>
@@ -934,7 +934,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med lån via Creditsafe</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med Lån via Creditsafe"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med Lån via Creditsafe"></p>
 <ul>
 <li><strong>Högre räntor:</strong> Lån via Creditsafe kan ofta ha högre räntor jämfört med traditionella banklån. Detta beror på att långivare som accepterar betalningsanmärkningar ofta väljer att ta ut mer för den ökade risken.</li>
 <li><strong>Kortare lånetider:</strong> Många lån som erbjuds genom Creditsafe har kortare löptider, vilket innebär att låntagare måste återbetala beloppet snabbare. Detta kan leda till en ökad ekonomisk press och risk för betalningssvårigheter.</li>
