--- a/direkt-utbetalning-handelsbanken/index.html
+++ b/direkt-utbetalning-handelsbanken/index.html
@@ -180,7 +180,7 @@ Här finns lån med direkt utbetalning till Handelsbanken som ger dig tillgång 
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2023/10/direkt-utbetalning-handelsbanken..webp" alt="Snabblån med utbetalning Handelsbanken" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2023/10/direkt-utbetalning-handelsbanken.webp" alt="Snabblån med utbetalning Handelsbanken" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -708,7 +708,7 @@ button.bleu {
 <h2>
 <div class="unskew">Snabblån: Din lösning vid behov</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för snabblån Handelsbanken"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för snabblån Handelsbanken"></p>
 <p><p>Enligt vår branscherfarenhet kan snabblån med omedelbar utbetalning vara en smidig lösning om du själv använder Handelsbanken för dina bankärenden.  Dessa lån erbjuder en snabb och effektiv väg till kapital, vilket gör det möjligt för dig att hantera akuta ekonomiska situationer med lätthet. </p>
 <blockquote><p>Snabblån är din räddning när ekonomin plötsligt får en knäck</p></blockquote>
 <p>Samma dag som din ansökan godkänns kan pengarna dyka upp på ditt konto.  För många innebär detta en frigörelse från oro och stress, särskilt när oväntade utgifter som reparationer eller medicinska kostnader snarast måste åtgärdas. </p>
@@ -916,7 +916,7 @@ button.bleu {
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med snabblån via Handelsbankenn</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med snabblån Handelsbanken"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med snabblån Handelsbanken"></p>
 <ul>
 <li><strong>Snabb utbetalning:</strong> Snabblån erbjuder omedelbar tillgång till kapital, ofta inom minuter efter godkännande. Detta är särskilt värdefullt när oväntade kostnader uppstår och du behöver pengar snabbt.</li>
 <li><strong>Enkel ansökningsprocess:</strong> Många långivare erbjuder smidiga och användarvänliga onlineformulär för låneansökan. Detta gör det enkelt för dig att fylla i nödvändig information utan krångel.</li>
@@ -934,7 +934,7 @@ button.bleu {
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med snabblån via Handelsbanken</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med snabblån Handelsbanken"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med snabblån Handelsbanken"></p>
 <ul>
 <li><strong>Höga räntor:</strong> Snabblån har ofta högre räntor jämfört med traditionella lån, vilket kan leda till att totalkostnaden blir betydande. Detta innebär att om du inte kan betala tillbaka lånet i tid, kan skulden växa snabbare än vad du förväntat dig.</li>
 <li><strong>Korta återbetalningstider:</strong> Många snabblån kommer med korta löptider, vilket kan göra det svårt för låntagare att återbetala i tid. Denna press kan leda till ytterligare ekonomisk stress och i vissa fall kan det resultera i betalningsanmärkningar.</li>
