--- a/dromlan/index.html
+++ b/dromlan/index.html
@@ -179,7 +179,7 @@ Publicerat i <a href="https://lastoffer.net/category/lan/">lån</a>		</span>
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2023/05/dromlan-1..webp" alt="Drömlån är lån för att uppfylla drömmar" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2023/05/dromlan-1.webp" alt="Drömlån är lån för att uppfylla drömmar" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -686,7 +686,7 @@ button.bleu {
 <h2>
 <div class="unskew">Drömlån: Nyckeln till framgång</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för drömlån och dess fördelar"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för drömlån och dess fördelar"></p>
 <p><p>Att drömma är en djupt mänsklig egenskap.  Vi strävar efter att förverkliga våra visioner, oavsett om de gäller hemmet, utbildning eller egen verksamhet.  När dessa drömmar behöver stöd i form av kapital, kliver drömlån in som en kraftfull verktyg. </p>
 <blockquote><p>Drömlån är inte bara lån; det är möjligheter i sina renaste former</p></blockquote>
 <p>Drömlån hänvisar till anpassade lån som utformas för att uppfylla individuella behov och ambitioner.  Med en mångfald av villkor erbjuder dessa lån en chans att förverkliga själens önskningar, vare sig det handlar om att renovera hemmet, starta ett företag eller investera i utbildning. </p>
@@ -816,7 +816,7 @@ button.bleu {
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med Drömlån</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med Drömlån"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med Drömlån"></p>
 <ul>
 <li><strong>Anpassade villkor:</strong> Drömlån erbjuder skräddarsydda villkor som kan anpassas efter individens ekonomiska situation. Detta gör att låntagare kan välja mellan olika återbetalningstider och räntor som passar deras livsstil.</li>
 <li><strong>Låg ränta:</strong> Många drömlån har konkurrenskraftiga räntesatser som hjälper låntagare att hålla kostnaderna nere. En lägre ränta innebär att du kan spara pengar över tid, vilket ger mer utrymme i din budget för andra viktiga utgifter.</li>
@@ -834,7 +834,7 @@ button.bleu {
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med Drömlån</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med Drömlån"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med Drömlån"></p>
 <ul>
 <li><strong>Hög räntor för vissa låntagare:</strong> Även om drömlån ofta erbjuder konkurrenskraftiga räntor, kan vissa låntagare med låg kreditvärdighet riskera att få högre räntor. Detta kan leda till höga totala kostnader över tiden, vilket kan bli belastande för den ekonomiska situationen.</li>
 <li><strong>Kortare återbetalningstider:</strong> Vissa drömlån erbjuder kortare återbetalningstider, vilket kan skapa en pressad ekonomisk situation för låntagare. Att hantera högre månatliga betalningar kan vara svårt, särskilt för dem med redan begränsad budget.</li>
