--- a/enkla-lanet/index.html
+++ b/enkla-lanet/index.html
@@ -180,7 +180,7 @@ Vi hittar enkla lån som är lätta att få, och som erbjuder dig en snabb ansö
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2023/05/enklast-lan..webp" alt="Enkla lånet är det som är enklast att få" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2023/05/enklast-lan.webp" alt="Enkla lånet är det som är enklast att få" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -884,7 +884,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <h2>
 <div class="unskew">Enkla lån för snabb finansiering</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för enkla lån"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för enkla lån"></p>
 <p><p>I en tid när livets oförutsedda utgifter ofta kan kännas överväldigande, blir möjligheten till att snabbt få tillgång till kapital ovärderlig.  Med ett <a href="">enkelt lån</a> kan du navigera genom ekonomiska utmaningar utan att behöva genomgå komplicerade processer eller tjocka buntar av dokumentation. </p>
 <blockquote><p>Enkelhet är nyckeln till framgång i låneprocessen</p></blockquote>
 <p>. </p>
@@ -1078,7 +1078,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med Enkla Lån</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med Enkla Lån"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med Enkla Lån"></p>
 <ul>
 <li><strong>Snabb ansökningsprocess:</strong> Enkla lån erbjuder en omedelbar och smidig ansökningsprocess som enkelt kan genomföras online. Vanligtvis får låntagare besked inom kort, vilket möjliggör snabb tillgång till nödvändiga medel.</li>
 <li><strong>Ingen UC-kreditprövning:</strong> Många långivare av enkla lån gör inte kreditupplysningar via UC, vilket gör att personer med sämre kreditvärdighet kan få lån. Detta öppnar dörrar för dem som tidigare haft svårt att få godkännande från traditionella banker.</li>
@@ -1096,7 +1096,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med Enkla Lån</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med Enkla Lån"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med Enkla Lån"></p>
 <ul>
 <li><strong>Höga räntor:</strong> En av de största nackdelarna med enkla lån är att de ofta kommer med mycket högre räntor än traditionella lån. Detta kan leda till att den totala återbetalningssumman blir avsevärt mycket större än det ursprungliga lånebeloppet.</li>
 <li><strong>Korta löptider:</strong> Även om korta löptider kan verka fördelaktiga, kan de också vara en nackdel om låntagaren har svårt att återbetala lånet snabbt. Detta kan resultera i en pressad situation där låntagaren känner sig tvingad att betala tillbaka utan att ha tillräckligt med tid att planera sin ekonomi.</li>
