--- a/fa-lan-med-lag-kreditvardighet/index.html
+++ b/fa-lan-med-lag-kreditvardighet/index.html
@@ -180,7 +180,7 @@ Publicerat i <a href="https://lastoffer.net/category/lan/">lån</a>		</span>
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2024/08/fa-lan-med-lag-kreditvardighet..webp" alt="Hjälp att få lån med låg kreditvärdighet" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2024/08/fa-lan-med-lag-kreditvardighet.webp" alt="Hjälp att få lån med låg kreditvärdighet" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -883,7 +883,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <h2>
 <div class="unskew">Möjligheter till lån trots hinder</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för lån med svag kredit."></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för lån med svag kredit."></p>
 <p>   Att navigera genom den komplexa världen av lån kan ofta verka överväldigande, särskilt för dem med en svajig kreditvärdighet.  Många känner sig vilse i tillvaron när dörrar som en gång föreföll öppna, plötsligt stängs. </p>
 <p> Du är inte ensam i denna utmaning; många tampas med liknande situationer.     </p>
 <blockquote><p>Hinder är till för att överkommas &#8211; låt inte ett kreditbetyg sätta käppar i hjulen</p></blockquote>
@@ -1085,7 +1085,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med lån trots låg kredit</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med lån trots låg kredit"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med lån trots låg kredit"></p>
 <ul>
 <li>
         Ökad tillgång till finansiering: Lån med låg kreditvärdighet erbjuder individer möjligheten att få kapital som annars skulle kunna vara ouppnåeligt. Detta kan vara avgörande för att lösa akuta ekonomiska problem eller finansiera större inköp.
@@ -1123,7 +1123,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med lån vid svag kredit</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med lån vid svag kredit"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med lån vid svag kredit"></p>
 <ul>
 <li>
         Högre räntor: Lån med låg kreditvärdighet medför vanligtvis högre räntor jämfört med lån till personer med bättre kreditpoäng. Detta kan leda till att den totala kostnaden för lånet blir mycket högre än först beräknat, vilket påverkar betalningsförmågan.
