--- a/fa-lan-utan-hoga-krav/index.html
+++ b/fa-lan-utan-hoga-krav/index.html
@@ -180,7 +180,7 @@ Publicerat i <a href="https://lastoffer.net/category/lan/">lån</a>		</span>
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2024/08/lan-utan-hoga-krav..webp" alt="Få lån utan höga krav" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2024/08/lan-utan-hoga-krav.webp" alt="Få lån utan höga krav" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -883,7 +883,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <h2>
 <div class="unskew">Att få lån utan krav</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för Lån utan Höga Krav"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för Lån utan Höga Krav"></p>
 <p>    Att hantera ekonomiska utmaningar kan ibland kännas överväldigande, särskilt när det kommer till att hitta rätt finansieringsalternativ.  Men oroa dig inte! Det finns sätt att få <a href="">lån utan höga krav</a> som öppnar dörrar för dem med varierande ekonomiska situationer. </p>
 <p>    Många står inför svårigheter med sin kreditvärdighet, vilket kan hindra dem från att få de nödvändiga resurserna.  Genom att förstå de olika lånealternativen som finns tillgängliga, kan du få kontroll över din ekonomiska framtid. </p>
 <p> Långivare erbjuder idag snabba, smidiga lösningar som anpassar sig efter dina behov.     Genom att välja lån utan strikta krav, ger du dig själv en chans att få den hjälp du förtjänar.  Oavsett om det handlar om akuta utgifter eller långsiktiga investeringar, är det viktigt att hitta en lösning som passar din specifika situation. </p>
@@ -965,7 +965,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med lån utan höga krav</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med lån utan höga krav"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med lån utan höga krav"></p>
 <ul>
 <li><strong>Snabb tillgång till pengar:</strong> Lån utan höga krav erbjuder en snabb lösning för ekonomiska nödsituationer. Du kan få nödvändiga medel på kort tid, vilket hjälper dig att hantera oväntade utgifter.</li>
 <li><strong>Flexibla villkor:</strong> Dessa lån kommer ofta med mer generösa villkor och betalningsalternativ. Detta ger låntagare större frihet att välja en plan som passar deras budget och ekonomiska situation.</li>
@@ -983,7 +983,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med lån utan höga Krav</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med lån utan höga Krav"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med lån utan höga Krav"></p>
 <ul>
 <li><strong>Högre räntor:</strong> Lån utan höga krav kan ofta komma med högre räntesatser jämfört med traditionella lån. Detta kan leda till att låntagarna betalar mer i ränta över tid, vilket kan bli ekonomiskt belastande.</li>
 <li><strong>Kortsiktiga lösningar:</strong> Många av dessa lån är utformade för att täcka akuta behov och kan därför ha korta återbetalningstider. Det kan sätta press på låntagaren att betala tillbaka snabbt, vilket ibland är svårt att hantera.</li>
