--- a/fast-rorlig-ranta/index.html
+++ b/fast-rorlig-ranta/index.html
@@ -178,7 +178,7 @@ Publicerat i <a href="https://lastoffer.net/category/hjalp-tips/">hjälp &amp; t
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2023/05/fast-rorlig-ranta..webp" alt="Fast eller rörlig ränta" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2023/05/fast-rorlig-ranta.webp" alt="Fast eller rörlig ränta" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 	
@@ -500,7 +500,7 @@ window.addEventListener(
 <h2>
 <div class="unskew">Valet mellan räntetyperna: fast eller rörlig</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för räntetyperna"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för räntetyperna"></p>
 <p><p>Att navigera i den finansiella djungeln kan kännas överväldigande, särskilt när det gäller val av lån.  En av de mest centrala frågorna är huruvida man bör välja lån med <a href="">fast eller rörlig ränta</a>. </p>
 <blockquote><p>Räntans natur formar vår ekonomiska verklighet</p></blockquote>
 <p> Förståelsen av dessa två alternativ kan ha en avgörande inverkan på din privatekonomi.   </p>
@@ -628,7 +628,7 @@ window.addEventListener(
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med fast och rörlig ränta</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med fast och rörlig ränta"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med fast och rörlig ränta"></p>
 <ul>
 <li><strong>Stabilitet med fast ränta:</strong> Fast ränta ger en förutsägbar månatlig kostnad under hela lånets löptid. Detta gör det enklare att planera och budgetera, vilket minskar den ekonomiska osäkerheten för låntagaren.</li>
 <li><strong>Skydd mot räntehöjningar:</strong> Genom att välja fast ränta är du skyddad mot plötsliga och oväntade höjningar som kan uppstå på marknaden. Detta ger en trygghet i att dina kostnader inte kommer att öka över tid.</li>
@@ -646,7 +646,7 @@ window.addEventListener(
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med fast och rörlig ränta</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med fast och rörlig ränta"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med fast och rörlig ränta"></p>
 <ul>
 <li><strong>Osäkerhet med rörlig ränta:</strong> En av de största nackdelarna med rörlig ränta är osäkerheten kring framtida kostnader. Månadskostnaderna kan öka oväntat, vilket kan göra det svårt att planera sin ekonomi och budgetera för framtiden.</li>
 <li><strong>Risk för räntehöjningar:</strong> Om marknadsräntorna stiger, påverkas direkta kostnader för lån med rörlig ränta. Detta innebär att låntagaren kan hamna i en situation där månadskostnaderna blir svåra att hantera.</li>
