--- a/ferratum/index.html
+++ b/ferratum/index.html
@@ -184,7 +184,7 @@
 	  </div>     
 			  
  <div class="row"></div> <div class="row"><div class="cell femhundra hogk">
-		 <img decoding="async" alt="Högkostnadskredit"   src="../../../lastoffer.net/laana_pengar/media/hogkostnadskredit..webp" width="103" height="85"> 
+		 <img decoding="async" alt="Högkostnadskredit"   src="../../../lastoffer.net/laana_pengar/media/hogkostnadskredit.webp" width="103" height="85"> 
 		Om du inte kan betala tillbaka hela skulden riskerar du en betalningsanmärkning. För stöd, vänd dig till budget- och skuldrådgivningen i din kommun. Kontaktuppgifter finns på hallåkonsument.se</div>
   
 	</div></div>
@@ -196,28 +196,28 @@
 <div class="cell">
 <h3>Ferratum Trustpilot</h3>
 <p>Omdömen: 667</p>Trustpilot betyg:  3,8 av 5 (76 %)</p>
-<div class="trust"><img decoding="async" src="../../../lastoffer.net/media/trustpilotbg..webp" height="50px" width="250px" alt="Trustpilot ger Ferratum betyg 3.8 av 5" title="Trustpilot ger Ferratum betyg 3.8 av 5"></div> 
+<div class="trust"><img decoding="async" src="../../../lastoffer.net/media/trustpilotbg.webp" height="50px" width="250px" alt="Trustpilot ger Ferratum betyg 3.8 av 5" title="Trustpilot ger Ferratum betyg 3.8 av 5"></div> 
 </div>
 
 <div class="cell rew">
  <p>2023-07-23</p>
 	 <h4>Snabb och smidig hjälp och ett STORT…</h4>
 	 <p>Snabb och smidig hjälp och ett STORT Pluss är att dom har den lägsta räntan när det kommer till kontokredit och du vill ta ett snabbt lån och slippa uc!</p>	
-	<div class="betyg_1"><img decoding="async" src="../../../lastoffer.net/media/trustpilotbg..webp" height="25px" width="125px" alt="Kund Ferratum omdöme 5" title="Kund ger Ferratum betyg 5 av 5"></div>
+	<div class="betyg_1"><img decoding="async" src="../../../lastoffer.net/media/trustpilotbg.webp" height="25px" width="125px" alt="Kund Ferratum omdöme 5" title="Kund ger Ferratum betyg 5 av 5"></div>
  	</div>
 
 <div class="cell rew">
 	<p>2023-07-23</p>
 		<h4>Smidigt och snabbt….men dyrt.</h4>
 		<p>Snabb återkoppling och trevligt bemötande. Dock till ett högt pris.</p>	
-	<div class="betyg_2"><img decoding="async" src="../../../lastoffer.net/media/trustpilotbg..webp" height="25px" width="125px" alt="Kund Ferratum omdöme 4" title="Kund ger Ferratum betyg 4 av 5"></div>
+	<div class="betyg_2"><img decoding="async" src="../../../lastoffer.net/media/trustpilotbg.webp" height="25px" width="125px" alt="Kund Ferratum omdöme 4" title="Kund ger Ferratum betyg 4 av 5"></div>
  </div>
 
 <div class="cell rew">
  <p>2023-07-26</p>
  <h4>De var trevliga och mänskliga vilket…</h4>
 	 <p>De var trevliga och mänskliga vilket inte min egen bank var. Jag rekommenderar dig som behöver att välja denna långivare.</p>	
-	<div class="betyg_3"><img decoding="async" src="../../../lastoffer.net/media/trustpilotbg..webp" height="25px" width="125px" alt="Kund Ferratum omdöme 5" title="Kund ger Ferratum betyg 5 av 5"></div>
+	<div class="betyg_3"><img decoding="async" src="../../../lastoffer.net/media/trustpilotbg.webp" height="25px" width="125px" alt="Kund Ferratum omdöme 5" title="Kund ger Ferratum betyg 5 av 5"></div>
  </div>
  
 <style>
@@ -371,7 +371,7 @@ Låna från 1 000 - 50 000 kronor utan UC och med utbetalning inom 15 minuter.",
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2024/09/ferratum-mer-an-pengar-till-alla..webp" alt="Ferratum - mer än lån till alla" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2024/09/ferratum-mer-an-pengar-till-alla.webp" alt="Ferratum - mer än lån till alla" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 	
@@ -695,7 +695,7 @@ window.addEventListener(
 <h2>
 <div class="unskew">Ferratum: Din väg till frihet</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för Ferratums lån"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för Ferratums lån"></p>
 <p><p>Välkommen till en värld av finansiell innovation och oberäknelig möjlighet! Ferratum tar låneverksamheten till en ny dimension, där obehagliga byråkratiska hinder och otydliga villkor lämnas bakom. </p>
 <p> Här handlar det om att erbjuda alla en chans till ekonomisk stabilitet.     </p>
 <blockquote><p>Det som berikar livet är att ta steg mot en tryggare framtid</p></blockquote>
@@ -810,7 +810,7 @@ window.addEventListener(
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med Ferratum-lån</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med Ferratum-lån"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med Ferratum-lån"></p>
 <ul>
 <li><strong>Snabba utbetalningar:</strong> Ferratum erbjuder omedelbara utbetalningar för godkända lån, ofta samma dag, vilket är ovärderligt vid akuta ekonomiska behov. Oavsett om det gäller oförutsedda kostnader eller planerade inköp, får du snabb tillgång till dina medel.</li>
 <li><strong>Ingen UC-kontroll:</strong> Genom att använda Creditsafe för kreditprövning slipper låntagare negativa följder på sin kreditvärdighet. Detta öppnar dörrar för personer med tidigare betalningsanmärkningar och gör lån mer tillgängliga.</li>
@@ -828,7 +828,7 @@ window.addEventListener(
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med Ferratum-lån</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med Ferratum-lån"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med Ferratum-lån"></p>
 <ul>
 <li><strong>Höga räntor:</strong> Snabblån från Ferratum kan innebära högre räntor jämfört med traditionella långivare. Detta kan leda till att kostnaden för lånet över tid blir avsevärt högre, särskilt om låntagaren inte återbetalar lånet inom avtalad tid.</li>
 <li><strong>Kortsiktig lösning:</strong> Ferratum erbjuder främst kortfristiga lån, vilket kan göra det svårt för låntagare att hitta långsiktiga lösningar på sina finansiella problem. Detta kan resultera i en ond cirkel av att låna på nytt för att betala tillbaka tidigare skulder.</li>
