--- a/flexibla-laneformer/index.html
+++ b/flexibla-laneformer/index.html
@@ -177,7 +177,7 @@ Publicerat i <a href="https://lastoffer.net/category/lan/">lån</a>		</span>
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2023/05/flexibla-lan..webp" alt="Flexibla lån är anpassningsbara lån" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2023/05/flexibla-lan.webp" alt="Flexibla lån är anpassningsbara lån" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 	
@@ -876,7 +876,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <h2>
 <div class="unskew">Flexibla lån för din trygghet</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för flexibla lån"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för flexibla lån"></p>
 <p><p>I en värld där oväntade ekonomiska utmaningar och förändringar är vardag, blir det tydligt att traditionella låneformer ibland ligger långt ifrån det vi verkligen behöver.  För att effektivt navigera genom osäkerheten, uppstår behovet av skräddarsydda finansiella lösningar. </p>
 <blockquote><p>Flexibilitet är nyckeln till att hantera livets oförutsägbarheter</p></blockquote>
 <p>Flexibla lån, också kända som anpassningsbara lån, erbjuder en unik möjlighet för låntagare att ta kontroll över sin ekonomiska situation. </p>
@@ -1066,7 +1066,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med flexibla lån</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med flexibla lån"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med flexibla lån"></p>
 <ul>
 <li><strong>Flexibilitet i återbetalningar:</strong> Flexibla lån ger låntagare möjlighet att justera sina betalningar utifrån aktuella ekonomiska omständigheter. Du kan välja att betala mer eller mindre varje månad beroende på din inkomst och utgifter, vilket hjälper till att hantera oväntade kostnader.</li>
 <li><strong>Endast ränta på utnyttjad kredit:</strong> Med flexibla lån betalar du ränta på det belopp du faktiskt lånar, inte på hela kreditlinjen. Detta gör att du kan spara betydande räntekostnader, särskilt om du inte behöver låna hela beloppet vid varje tillfälle.</li>
@@ -1084,7 +1084,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med flexibla lån</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med flexibla lån"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med flexibla lån"></p>
 <ul>
 <li><strong>T högre räntor:</strong> Flexibla lån kan ibland ha högre räntor än traditionella lån, särskilt om låntagaren har en svag kreditvärdighet. Detta kan leda till ökade kostnader över tid, vilket kan göra det svårare att återbetala lånet.</li>
 <li><strong>Risk för skuldsättning:</strong> Den stora flexibiliteten med flexibla lån kan också leda till en överdriven användning av krediten. Utan ordentlig budgetering kan låntagare hamna i en spiral av skuldsättning som är svår att ta sig ur.</li>
