--- a/forbattra-kreditvardigheten/index.html
+++ b/forbattra-kreditvardigheten/index.html
@@ -179,7 +179,7 @@ Publicerat i <a href="https://lastoffer.net/category/hjalp-tips/">hjälp &amp; t
 <div class="row">
 </div>
 <div class="row">
-<div class="cell right"><img fetchpriority="high" decoding="async" src="../media/2023/09/Forbattra-kreditvardighet-for-att-fa-lan..webp" alt="Förbättra kreditvärdighet för att få lån" width="300" height="300" /></div>
+<div class="cell right"><img fetchpriority="high" decoding="async" src="../media/2023/09/Forbattra-kreditvardighet-for-att-fa-lan.webp" alt="Förbättra kreditvärdighet för att få lån" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 	
@@ -487,7 +487,7 @@ window.addEventListener(
 	</script></div>
 <div class="row">
 <div class="cell">
-<p><img decoding="async" style="width: 30px;height: 30px;margin: 5px;padding: 10px;background: #e8e8e8;border-radius: 100%/10px 10px 10px 10px" src="../media/glodlampa..webp" alt="Förklaring: Förbättra kreditvärdighet för att få lån" /></p>
+<p><img decoding="async" style="width: 30px;height: 30px;margin: 5px;padding: 10px;background: #e8e8e8;border-radius: 100%/10px 10px 10px 10px" src="../media/glodlampa.webp" alt="Förklaring: Förbättra kreditvärdighet för att få lån" /></p>
 <p>Om du någonsin har drömt om att äga ditt eget hem, starta ett företag eller vidta nödvändiga åtgärder för att betala av skulden, vet du att tillgången till kapital kan vara skillnaden mellan att drömma och göra.</p>
 <p>Men att få lån är ofta lättare sagt än gjort, särskilt om din tidigare ekonomiska historia har lämnat dig med en mindre-än-stellar kreditpoäng. Faktum är att din kreditvärdighet kan vara avgörande för din ekonomiska framtid.</p>
 <p>Det är dörren till möjligheter som att köpa ett hus, en bil eller att finansiera din utbildning. Men vad händer om den dörren känns låst? Eller värre, bara öppen en smula? Oroa dig inte &#8211; det finns sätt att förbättra din kreditvärdighet för att få lån.</p>
