--- a/forbrukslan/index.html
+++ b/forbrukslan/index.html
@@ -180,7 +180,7 @@ Publicerat i <a href="https://lastoffer.net/category/lane-penger/">låne penger<
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2024/12/forbrukslan..webp" alt="Forbrukslån" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2024/12/forbrukslan.webp" alt="Forbrukslån" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 	
@@ -502,7 +502,7 @@ window.addEventListener(
 <h2>
 <div class="unskew">Forbrukslån som nøkkel til frihet</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Forklaring for forbrukslån"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Forklaring for forbrukslån"></p>
 <p><p>Forbrukslån er en fascinerende finansieringsløsning som åpner dører til en rekke muligheter.  Med bestemmelsen om at du ikke trenger å stille sikkerhet, gir denne lånetypen deg friheten til å velge hvordan du vil benytte midlene. </p>
 <p> Dette kan være alt fra oppussing til feriereiser, eller for å håndtere uventede regninger som dukker opp. </p>
 <blockquote><p>Lånene gir deg muligheten til å forme drømmer til virkelighet </p></blockquote>
@@ -585,7 +585,7 @@ window.addEventListener(
 <div class="row forulempe">
 <div class="cell positiv">
 <h3>Fordeler med forbrukslån</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fordeler med forbrukslån"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fordeler med forbrukslån"></p>
 <ul>
 <li>Ingen sikkerhet nødvendig: Forbrukslån krever ikke at du stiller pant i eiendeler, noe som gir deg friheten til å låne uten å risikere verdifulle eiendeler. Dette gjør det til et attraktivt alternativ for mange, da man slipper bekymringer om å måtte tabe hjemmet eller bilen.</li>
 <li>Fleksible bruksområder: Du kan bruke forbrukslånet til det formålet du ønsker, enten det er til oppussing, reise eller dekke uventede kostnader. Denne fleksibiliteten lar deg håndtere dine økonomiske prioriteringer på en personlig og tilpasset måte.</li>
@@ -603,7 +603,7 @@ window.addEventListener(
 <div class="row forulempe">
 <div class="cell negativ">
 <h3>Ulemper med forbrukslån</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Ulemper med forbrukslån"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Ulemper med forbrukslån"></p>
 <ul>
 <li>Høyere rente enn sikrede lån: Forbrukslån er ofte dyrere enn boliglån og billån fordi de ikke krever sikkerhet. Dette gjør at renten kan være betydelig høyere, noe som kan føre til store totalutgifter over tid.</li>
 <li>Kredittvurdering er avgjørende: Din kredittverdighet vil påvirke både hvor mye du kan låne og hvilken rente du tilbys. Dersom kredittvurderingen din er dårlig, kan det begrense mulighetene dine betydelig.</li>
