--- a/foretagslan-enskild-firma/index.html
+++ b/foretagslan-enskild-firma/index.html
@@ -180,7 +180,7 @@ Publicerat i <a href="https://lastoffer.net/category/foretagslan/">företagslån
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2024/08/foretagslan-enskild-firma-1..webp" alt="Företagslån enskild firma" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2024/08/foretagslan-enskild-firma-1.webp" alt="Företagslån enskild firma" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -525,7 +525,7 @@ window.addEventListener(
   <td>Beror på bank</td>
   <td>10 000</td>
       <td>30 000 000</td>
-   <td><img alt=UC title=UC src='../../../localhost/laana_pengar/media/uc..webp'></td>	
+   <td><img alt=UC title=UC src='../../../localhost/laana_pengar/media/uc.webp'></td>	
     <td>I många fall samma dag</td>
 					   </tr>
 					  <th scope="row"><a href=https://lastoffer.net/capitalbox/>Capitalbox</a></th>
@@ -533,7 +533,7 @@ window.addEventListener(
   <td>Kassaflöde</td>
   <td>20 000</td>
       <td>3 500 000</td>
-   <td><img alt=UC title=UC src='../../../localhost/laana_pengar/media/uc..webp'></td>	
+   <td><img alt=UC title=UC src='../../../localhost/laana_pengar/media/uc.webp'></td>	
     <td>Inom 24 timmar</td>
 					   </tr>
 					  <th scope="row"><a href=https://lastoffer.net/opr/>OPR</a></th>
@@ -541,7 +541,7 @@ window.addEventListener(
   <td>Kreditbedömning</td>
   <td>30 000</td>
       <td>1 000 000</td>
-   <td><img alt=Creditsafe title=Creditsafe src='../../../localhost/laana_pengar/media/creditsafe..webp'></td>	
+   <td><img alt=Creditsafe title=Creditsafe src='../../../localhost/laana_pengar/media/creditsafe.webp'></td>	
     <td>Godkänt lån överförs direkt</td>
 					   </tr>
 					  <th scope="row"><a href=https://lastoffer.net/froda/>Froda</a></th>
@@ -549,7 +549,7 @@ window.addEventListener(
   <td>Försäljning</td>
   <td>0</td>
       <td>15 000 000</td>
-   <td><img alt=Creditsafe title=Creditsafe src='../../../localhost/laana_pengar/media/creditsafe..webp'></td>	
+   <td><img alt=Creditsafe title=Creditsafe src='../../../localhost/laana_pengar/media/creditsafe.webp'></td>	
     <td>På företagskontot samma dag </td>
 					   </tr>
 					  <th scope="row"><a href=https://lastoffer.net/fedelta/>Fedelta</a></th>
@@ -557,7 +557,7 @@ window.addEventListener(
   <td>Individuell</td>
   <td>25 000</td>
       <td>1 000 000</td>
-   <td><img alt=UC title=UC src='../../../localhost/laana_pengar/media/uc..webp'></td>	
+   <td><img alt=UC title=UC src='../../../localhost/laana_pengar/media/uc.webp'></td>	
     <td>Inom en arbetsdag</td>
 					   </tr>
 					    
@@ -569,7 +569,7 @@ window.addEventListener(
 <h2>
 <div class="unskew">Att få företagslån beviljat</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för företagslån "></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för företagslån "></p>
 <p>    Att driva en enskild firma kan vara en spännande och utmanande resa.  För många entreprenörer är möjligheten att växa och expandera verksamheten en drivkraft.  Men vad händer när kapitalbrist sätter käppar i hjulen? Då kan företagslån enskild firma vara lösningen. </p>
 <p>    Genom att ansöka om ett företagslån öppnar du dörren till nya möjligheter.  Oavsett om det handlar om att investera i ny utrustning, köpa varulager, eller kanske att finansiera marknadsföring, kan rätt lån ge liv åt dina affärsidéer. </p>
 <p>    Denna typ av finansiering erbjuder inte bara en snabb tillgång till kapital, utan även en chans att skapa en stabil grund för din verksamhet.  Med välplanerade investeringar kan du säkerställa långsiktig tillväxt och öka din konkurrenskraft på marknaden. </p>
@@ -697,7 +697,7 @@ window.addEventListener(
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med företagslån för enskild firma</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="företagslån för enskild firma"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="företagslån för enskild firma"></p>
 <ul>
 <li>Snabb tillgång till kapital: Med företagslån kan du snabbt få tillgång till de medel som behövs för att genomföra nödvändiga investeringar eller täcka omkostnader. Detta kan göra skillnaden mellan att missa en affärsmöjlighet och att maximera din verksamhets potential.</li>
 <li>Flexibla lånealternativ: Det finns många olika typer av lån och kreditalternativ tillgängliga, vilket gör att du kan välja det som passar din specifika situation bäst. Oavsett om du behöver ett kortsiktigt lån eller en större långsiktig investering, finns det lösningar att hitta.</li>
@@ -715,7 +715,7 @@ window.addEventListener(
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med företagslån för enskild firma</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med företagslån för enskild firma"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med företagslån för enskild firma"></p>
 <ul>
 <li>Personligt ansvar: Som ägare av en enskild firma innebär lån ett personligt betalningsansvar. Om verksamheten skulle gå dåligt kan du bli tvungen att betala tillbaka lånet med dina personliga tillgångar, vilket kan leda till allvarliga ekonomiska problem.</li>
 <li>Räntor och avgifter: Företagslån kan ofta medföra höga räntor och avgifter, vilket kan göra dem kostsamma i det långa loppet. Om dessa kostnader inte beaktas i budgeten kan det påverka din likviditet och verksamhetens lönsamhet.</li>
