--- a/garanterat-lan/index.html
+++ b/garanterat-lan/index.html
@@ -179,7 +179,7 @@ Publicerat i <a href="https://lastoffer.net/category/snabblan/">snabblån</a>		<
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2023/09/Garanterat-lan-1..webp" alt="Garanterat lån" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2023/09/Garanterat-lan-1.webp" alt="Garanterat lån" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -882,7 +882,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <h2>
 <div class="unskew">Att få garanterade lån</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring: Garanterat lån"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring: Garanterat lån"></p>
 <p>Pengar är en del av det dagliga livet, och därför framstår garanterat lån som en strålande lösning för många.  Oavsett om du står inför plötsliga utgifter eller behöver stöd för att realisera dina drömmar, erbjuder dessa lån en väg ut ur finansiell osäkerhet. </p>
 <p>    Tanken på att få ett lån kan kännas överväldigande, särskilt för dem med en delad kreditbakgrund.  Men garanterade lån ger en ljusare horisont, där långivare är mer benägna att se bortom den traditionella kreditbedömningen. </p>
 <p> Detta möjliggör en mer inkluderande låneupplevelse.     Dessa finansiella avtal främjar inte bara individers tillgång till resurser, utan de är också utformade för att möta specifika behov.  Oavsett om du behöver likvida medel för att <a href="https://lastoffer.net/skuldfinansieringslan/">finansiera skulder</a>, utbildning eller affärsidéer, kan dessa lån vara en skräddarsydd lösning. </p>
@@ -954,7 +954,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med Garanterat lån</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Positivt med Garanterat lån"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Positivt med Garanterat lån"></p>
 <ul>
 <li><strong>Tillgänglighet för alla:</strong> Garanterade lån är utformade för att vara inkluderande, vilket innebär att de är tillgängliga för människor med olika kreditbakgrunder, inklusive de med svag kredit. Detta ger en chans för personer som tidigare har haft svårt att få lån att få nödvändig finansiering.</li>
 <li><strong>Snabbare behandlingsprocess:</strong> Till skillnad från traditionella lån, som kan ta tid att bearbeta, erbjuder garanterade lån ofta snabbare beslut och utbetalningar. Detta är särskilt värdefullt för dem som behöver medel omedelbart för oväntade utgifter.</li>
@@ -972,7 +972,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med Garanterat lån</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Negativt med Garanterat lån"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Negativt med Garanterat lån"></p>
 <ul>
 <li><strong>Högre räntor:</strong> Garanterade lån tenderar att ha högre räntesatser jämfört med traditionella lån. Detta beror på den ökad risk som långivaren tar när de erbjuder lån till personer med svag kreditvärdighet.</li>
 <li><strong>Begränsad lånebelopp:</strong> Många långivare begränsar det maximala belopp som kan lånas ut. Detta kan vara frustrerande för dem som behöver mer omfattande finansiering för större projekt eller investeringar.</li>
