--- a/guide-batlan/index.html
+++ b/guide-batlan/index.html
@@ -180,7 +180,7 @@ Publicerat i <a href="https://lastoffer.net/category/lan/">lån</a>		</span>
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2024/09/batlan..webp" alt="Båtlån" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2024/09/batlan.webp" alt="Båtlån" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -682,7 +682,7 @@ button.bleu {
 <h2>
 <div class="unskew">Båtlivets frihet genom lån</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för båtlåneprocessen"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för båtlåneprocessen"></p>
 <p><p>I en värld fylld av äventyr och frihet har båtägande blivit en symbol för livets njutningar.  Att glida fram över spegelblanka sjöar eller att utforska kusten ger en känsla av eufori som få andra aktiviteter kan mäta sig med. </p>
 <blockquote><p>“Båtlivet erbjuder inte bara en fläkt av rörelse, utan en livsstil av frihet.</p></blockquote>
 <p>Men för många återstår en utmaning: finansieringen.  Många drömmer om att äga en båt, men hur ska man gå tillväga för att få tag på de nödvändiga medlen? Här kommer båtlån in som en räddare i nöden. </p>
@@ -864,7 +864,7 @@ button.bleu {
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med båtlån</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med båtlån"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med båtlån"></p>
 <ul>
 <li>Flexibla lånealternativ: Båtlån erbjuder olika typer av finansiering, inklusive lån med och utan säkerhet. Detta gör att varje låntagare kan välja det alternativ som bäst matchar deras ekonomiska situation och behov.</li>
 <li>Frihet att köpa: Med lån utan säkerhet får du fullständig frihet att köpa en båt av vem som helst, oavsett om det är en privatperson eller en auktoriserad återförsäljare. Denna flexibilitet gör det enklare att hitta den perfekta båten för dina äventyr.</li>
@@ -882,7 +882,7 @@ button.bleu {
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med båtlån</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med båtlån"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med båtlån"></p>
 <ul>
 <li>Högre räntor för lån utan säkerhet: Lån utan säkerhet tenderar att ha högre räntor jämfört med lån med säkerhet. Detta kan leda till högre totala kostnader över lånets löptid, vilket gör det mindre fördelaktigt för låntagaren.</li>
 <li>Krav på kreditvärdighet: För att bli beviljad ett båtlån krävs oftast god kreditvärdighet. Om din kreditprofil är mindre stabil kan det resultera i avslag på låneansökan eller mindre förmånliga villkor.</li>
