--- a/hitta-bra-lan-idag/index.html
+++ b/hitta-bra-lan-idag/index.html
@@ -180,7 +180,7 @@ Publicerat i <a href="https://lastoffer.net/category/lan/">lån</a>		</span>
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2024/09/lana-pengar-idag..webp" alt="Hitta bra lån idag" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2024/09/lana-pengar-idag.webp" alt="Hitta bra lån idag" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -687,7 +687,7 @@ button.bleu {
 <h2>
 <div class="unskew">Hitta snabba och smarta lån</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för snabba lån"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för snabba lån"></p>
 <p><p>För många innebär oväntade utgifter en stor stressfaktor som kan kasta en hel ekonomi i obalans.  Att förstå sina alternativa finansieringsmöjligheter kan ge en känsla av kontroll.  Det är här smslån kommer in som en potentiellt räddande anka i tuffa situationer. </p>
 <blockquote><p>Få kontroll över din ekonomi och bemästra plötsliga utgifter med intelligenta lånealternativ</p></blockquote>
 <p>Teknikens framfart har revolutionerat hur vi ansöker om lån.  I dag kan du enkelt navigera genom digitala plattformar, vilket ger snabb åtkomst till kapital som kan lösa akuta dilemman. </p>
@@ -889,7 +889,7 @@ button.bleu {
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med snabba lån</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med snabba lån"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med snabba lån"></p>
 <ul>
 <li><strong>Snabb tillgång till likvida medel:</strong> Smslån erbjuder omedelbar åtkomst till pengar, vilket är ovärderligt vid akuta utgifter. Genom att ha pengarna på kontot snabbt kan du hantera oväntade kostnader utan att behöva vänta flera dagar.</li>
 <li><strong>Enkel ansökningsprocess:</strong> Genom digitalisering kan låneansökningar göras snabbt och smidigt via dator eller mobil. Användningen av BankID gör att identifieringen sker automatiskt, vilket förenklar hela processen.</li>
@@ -907,7 +907,7 @@ button.bleu {
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med snabba lån</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med snabba lån"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med snabba lån"></p>
 <ul>
 <li><strong>Höga räntor:</strong> Smslån kommer ofta med betydligt högre räntor jämfört med traditionella banklån. Detta kan leda till att återbetalningen blir kostsam och ökar det totala lånebeloppet avsevärt.</li>
 <li><strong>Risk för skuldfällor:</strong> Eftersom det är enkelt att ta snabblån kan det leda till överbelåning och skapa en ond cirkel av skuldsättning. Många som tar sms-lån kan häva in mer skuld än de kan hantera, vilket förvärrar deras ekonomiska situation.</li>
