--- a/hjalp-lan-med-trasslig-ekonomi/index.html
+++ b/hjalp-lan-med-trasslig-ekonomi/index.html
@@ -179,7 +179,7 @@ Publicerat i <a href="https://lastoffer.net/category/hjalp-tips/">hjälp &amp; t
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2024/09/lan-med-trasslig-ekonomi..webp" alt="Hjälp att få lån med trasslig ekonomi" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2024/09/lan-med-trasslig-ekonomi.webp" alt="Hjälp att få lån med trasslig ekonomi" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -883,7 +883,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <h2>
 <div class="unskew">Hitta vägar till ekonomisk lättnad</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för lån vid svår ekonomi"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för lån vid svår ekonomi"></p>
 <p><p>Att stå inför en ekonomisk prövning kan kännas överväldigande, särskilt när skulder och oförutsedda utgifter hopar sig.  Många finner sig i en svår situation där de behöver rekrytera hjälp för att navigera genom lånealternativens snåriga djungel. </p>
 <blockquote><p>I mörka stunder av motgång är kunskap nyckeln till ljus</p></blockquote>
 <p> Det är just här som medvetenhet och strategiska insikter kan göra en betydande skillnad. </p>
@@ -1037,7 +1037,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med lån vid svår ekonomi</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med lån vid svår ekonomi"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med lån vid svår ekonomi"></p>
 <ul>
 <li>Förbättrad kreditvärdighet: Genom att arbeta med olika lånealternativ kan du aktivt förbättra din kreditprofil. En högre kreditpoäng öppnar dörrar till mer förmånliga lån och lägre räntesatser.</li>
 <li>Ökad finansiell flexibilitet: Alternativ som omstartslån erbjuder möjlighet att omstrukturera skulder och sänka månadskostnaderna. Detta ger dig mer utrymme i din budget för andra viktiga utgifter.</li>
@@ -1055,7 +1055,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med lån vid svår ekonomi</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med lån vid svår ekonomi"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med lån vid svår ekonomi"></p>
 <ul>
 <li>Höga räntor: Lån för personer med trasslig ekonomi kan ofta komma med högre räntesatser. Detta ökar de totala kostnaderna över tid och kan försvåra återbetalningen.</li>
 <li>Risk för ytterligare skuldsättning: Att ta lån för att betala av andra skulder kan leda till en ond cirkel av skuldsättning. Det är viktigt att ha en tydlig plan för hur lånen ska återbetalas, annars kan situationen snabbt förvärras.</li>
