--- a/hogkostnadskredit/index.html
+++ b/hogkostnadskredit/index.html
@@ -179,7 +179,7 @@ Publicerat i <a href="https://lastoffer.net/category/snabblan/">snabblån</a>		<
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2023/01/hogkostnadskrediter-1..webp" alt="Högkostnadskredit är dyra snabblån" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2023/01/hogkostnadskrediter-1.webp" alt="Högkostnadskredit är dyra snabblån" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -802,7 +802,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <h2>
 <div class="unskew">Högkostnadskrediter: Dyrbara val att undvika</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för Högkostnadskrediter"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för Högkostnadskrediter"></p>
 <p><p>Att navigera i den snåriga värld som omger lån och krediter kan vara en utmanande uppgift, särskilt när man ställs inför begreppet högkostnadskrediter.  Dessa lån, som ofta beskrivs som dyra snabblån, erbjuder snabba lösningar men medföljer risker som kan leda till betydande ekonomiska påfrestningar. </p>
 <blockquote><p>Snabbhet kan locka, men låt inte dyrbarhet skymma klarheten</p></blockquote>
 <p>Högkostnadskrediter är särskilt utformade för individer med svag kreditvärdighet eller betalningsanmärkningar.  Den oöverstigliga räntan, i många fall över 30 procentenheter, gör att dessa lån ofta känns övermäktiga. </p>
@@ -919,7 +919,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med högkostnadskrediter</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med Högkostnadskrediter"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med Högkostnadskrediter"></p>
 <ul>
 <li><strong>Snabba lån:</strong> Högkostnadskrediter erbjuder snabb tillgång till pengar, vilket kan vara avgörande vid akuta ekonomiska behov. Låntagare kan oftast få sina medel utbetalda inom kort tid, ofta samma dag, vilket ger en omedelbar lösning på oväntade utgifter.</li>
 <li><strong>Enkel ansökningsprocess:</strong> Ansökningsproceduren för högkostnadskrediter är oftast betydligt enklare än för traditionella lån. Många långivare kräver inte omfattande dokumentation eller långvariga kreditbedömningar, vilket gör det tillgängligt för fler personer.</li>
@@ -937,7 +937,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med högkostnadskrediter</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med Högkostnadskrediter"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med Högkostnadskrediter"></p>
 <ul>
 <li><strong>Extremt höga räntor:</strong> Högkostnadskrediter är kända för sina brutala räntor, som ofta ligger över 30 procentenheter över referensräntan. Detta medför att totalkostnaden för lånet kan bli mycket hög, vilket kan leda till oöverskådliga skuldsituationer för låntagaren.</li>
 <li><strong>Kortsiktig lösning:</strong> Även om högkostnadskrediter kan ge snabb tillgång till likviditet, är de i grunden en kortsiktig lösning. Många låntagare hamnar i en ond cirkel av att ta nya lån för att betala av gamla, vilket kan leda till en långvarig ekonomisk kris.</li>
