--- a/hograntekonto/index.html
+++ b/hograntekonto/index.html
@@ -180,7 +180,7 @@ Publicerat i <a href="https://lastoffer.net/category/spara/">spara</a>		</span>
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2023/07/hograntekonto-1..webp" alt="Högräntekonto med högst ränta" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2023/07/hograntekonto-1.webp" alt="Högräntekonto med högst ränta" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -509,7 +509,7 @@ window.addEventListener(
 <h2>
 <div class="unskew">Maximera din avkastning tryggt.</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för Högräntekonto"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för Högräntekonto"></p>
 <p><p>I en tid där finansiering och investeringar ständigt förändras, blir det allt viktigare att hitta smarta lösningar för att maximera avkastningen på våra besparingar.  </p>
 <blockquote><p>Smarta val idag skapar en stabil ekonomi imorgon</p></blockquote>
 </blockquote>
@@ -649,7 +649,7 @@ window.addEventListener(
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med högräntekonto</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med Högräntekonto"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med Högräntekonto"></p>
 <ul>
 <li><strong>Högre räntor:</strong> Högräntekonton erbjuder betydligt högre räntor jämfört med traditionella sparkonton. Detta innebär att dina besparingar växer snabbare och ger en mer lönsam avkastning över tid.</li>
 <li><strong>Minimal risk:</strong> Med ett högräntekonto investerar du dina pengar med låg risk. Detta gör kontot till ett säkert alternativ för dem som vill skydda sina besparingar.</li>
@@ -667,7 +667,7 @@ window.addEventListener(
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med högräntekonto</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med Högräntekonto"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med Högräntekonto"></p>
 <ul>
 <li><strong>Lägre avkastning än investeringar:</strong> Trots högre räntor än traditionella konton erbjuder högräntekonton generellt lägre avkastning jämfört med aktier eller andra investeringar. För investerare som söker maximalt avkastning kan detta vara en begränsning.</li>
 <li><strong>Bindningstider:</strong> Många högräntekonton kräver att du låser in dina pengar under en viss period. Detta innebär att du inte kan få tillgång till dessa medel utan att förlora den avtalade räntan, vilket kan vara obekvämt om ett akut behov skulle uppstå.</li>
