--- a/hogst-belopp-foretagslan/index.html
+++ b/hogst-belopp-foretagslan/index.html
@@ -508,7 +508,7 @@ window.addEventListener(
 <h2>
 <div class="unskew">Möjligheternas väg med företagslån</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för lånebeloppet"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för lånebeloppet"></p>
 <p><p>I en konstant föränderlig affärsvärld är tillgången till kapital avgörande för att staka ut en framgångsrik kurs.  När behovet av finansiering plötsligt uppstår, kan det kännas övermäktigt att navigera genom de olika lånealternativen som finns. </p>
 <blockquote><p>Pengar kan förändra spelreglerna och öppna dörrar till nya möjligheter</p></blockquote>
 <p>Det första steget är att förstå den tumregel som ofta anförs: små företag kan låna upp till 10% av sin årliga omsättning utan att ställa säkerhet. </p>
@@ -724,7 +724,7 @@ window.addEventListener(
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med företagslån</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med företagslån"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med företagslån"></p>
 <ul>
 <li><strong>Tillgång till kapital för tillväxt:</strong> Företagslån möjliggör nödvändig finansiering för att investera i nya projekt, expandera verksamheten eller köpa utrustning. Genom att ha tillgång till kapital kan företag reagera snabbt på marknadens förändringar och möjliggöra långsiktig tillväxt.</li>
 <li><strong>Flexibilitet i lånebelopp:</strong> Långivare erbjuder en variation av lånebelopp som kan anpassas efter företagets specifika behov. Oavsett om det handlar om små kortfristiga lån eller större belopp för långsiktiga investeringar kan företag hitta en lösning som passar deras situation.</li>
@@ -742,7 +742,7 @@ window.addEventListener(
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med företagslån</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med företagslån"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med företagslån"></p>
 <ul>
 <li><strong>Höga räntor:</strong> Många företagslån kommer med relativt höga räntor, vilket kan innebära betydande kostnader över tid. Detta kan särskilt påverka mindre företag eller nyetablerade företag som redan har begränsade resurser.</li>
 <li><strong>Risk för skuld:</strong> Att ta ett lån innebär alltid en risk för att hamna i en skuldfälla om företagets intäkter inte räcker till för att täcka återbetalningarna. Detta kan leda till finansiella problem och potentiellt hota företagets överlevnad.</li>
