--- a/hogsta-lanebelopp/index.html
+++ b/hogsta-lanebelopp/index.html
@@ -180,7 +180,7 @@ Publicerat i <a href="https://lastoffer.net/category/lan/">lån</a>		</span>
 </div>
 </div>
 <div class="row">
-<div class="cell right"><img fetchpriority="high" decoding="async"  src="../media/2017/05/Hogst-lanebelopp..webp" alt="Högst lånebelopp" width="300" height="300" /></div>
+<div class="cell right"><img fetchpriority="high" decoding="async"  src="../media/2017/05/Hogst-lanebelopp.webp" alt="Högst lånebelopp" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 	
