--- a/hopbakslan-lag-kreditvardighet/index.html
+++ b/hopbakslan-lag-kreditvardighet/index.html
@@ -179,7 +179,7 @@ Publicerat i <a href="https://lastoffer.net/category/samlingslan/">samlingslån<
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2024/08/hopbakslan-lag-kreditvardighet..webp" alt="Hopbakslån med låg kreditvärdighet" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2024/08/hopbakslan-lag-kreditvardighet.webp" alt="Hopbakslån med låg kreditvärdighet" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -882,7 +882,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <h2>
 <div class="unskew">Att få hopbakslån med låg kredit</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för hopbakslån"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för hopbakslån"></p>
 <p><p>Vi är många som vet hur det känns att försöka navigera genom en ekonomisk labyrint &#8211; det är en utmaning, särskilt när man sitter fast med flera små skulder.  Enligt vår erfarenhet är det många nya lånekunder som blir förvånade när de förstår att det är deras kreditvärdighet begränsar deras handlingsutrymme, vilket gör att alternativet att skaffa ett hopbakslån för att få upp sin scoring blir lockande. </p>
 <p><p>Med ett hopbakslån kan du förena flera lån till en enda, vilket förenklar din ekonomiska situation.  Du slipper stressen av att hantera flera olika betalningar och förfallodatum.  Istället får du en tydlig översikt över dina skulder, vilket ger större kontroll över din ekonomi. </p>
 <p><p>För den som har svag kredit kan det kännas som en kamp för att få lån.  Vi tycker därför att hopbakslån har den utformning som krävs ör att ge just den hjälp som behövs.  Genom att sänka månadsbetalningarna och potentiellt förbättra räntorna kan det bli en väg till skuldfrihet. </p>
@@ -947,7 +947,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med Hopbakslån</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med Hopbakslån"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med Hopbakslån"></p>
 <ul>
 <li><strong>Förenklad ekonomi:</strong> Genom att samla flera skulder till ett hopbakslån slipper du hantera flera räkningar varje månad. Det blir enkelt att hålla koll på återbetalningarna och förfallodatumen, vilket minskar risken för missade betalningar.</li>
 <li><strong>Lägre månadskostnad:</strong> Genom hopbakslån kan du sänka dina totala månadskostnader. Detta ger mer ekonomiskt utrymme i din budget, vilket kan bidra till att minska stressen och oron kring din ekonomi.</li>
@@ -965,7 +965,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med Hopbakslån</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med Hopbakslån"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med Hopbakslån"></p>
 <ul>
 <li><strong>Högre räntor:</strong> Långivare kan ofta erbjuda högre räntor för hopbakslån jämfört med traditionella lån, särskilt för dem med låg kreditvärdighet. Detta kan leda till högre totala kostnader över tid och påverka den ekonomiska situationen negativt.</li>
 <li><strong>Risk för längre återbetalningstid:</strong> För att sänka månadskostnaderna kan du välja en längre återbetalningstid, vilket kanske känns mer hanterbart idag. Men detta kan i sin tur göra att du betalar mer i ränta under lånets löptid, vilket gör ditt lån dyrare på lång sikt.</li>
