--- a/hopbakslan/index.html
+++ b/hopbakslan/index.html
@@ -180,7 +180,7 @@ Publicerat i <a href="https://lastoffer.net/category/samlingslan/">samlingslån<
 <div class="row">
 </div>
 <div class="row">
-<div class="cell right"><img fetchpriority="high" decoding="async" src="../media/2021/07/Hopbakslan-med-lag-ranta..webp" alt="Hopbakslån" width="300" height="300" /></div>
+<div class="cell right"><img fetchpriority="high" decoding="async" src="../media/2021/07/Hopbakslan-med-lag-ranta.webp" alt="Hopbakslån" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -682,7 +682,7 @@ button.bleu {
 }</script> </p>
 <div class="row">
 <div class="cell">
-<p><img decoding="async" style="width: 30px; height: 30px; margin: 5px; padding: 10px; background: #e8e8e8; border-radius: 100%/10px 10px 10px 10px;" src="../media/glodlampa..webp" alt="Förklaring: Hopbakslån" /></p>
+<p><img decoding="async" style="width: 30px; height: 30px; margin: 5px; padding: 10px; background: #e8e8e8; border-radius: 100%/10px 10px 10px 10px;" src="../media/glodlampa.webp" alt="Förklaring: Hopbakslån" /></p>
 <p>Vi är många som varit där &#8211; för många lån och krediter som minskar vår ekonomiska frihet. Men det finns en smart lösning som kan minska dina lånekostnader och ge dig en bättre privatekonomi.</p>
 <p>Hopbakslån är en smart strategi som låter dig samla alla dina befintliga lån och krediter till ett enda lån med lägre ränta.</p>
 <p>Istället för att jonglera flera lån med olika villkor och avgifter kan du nu ha ett enda bekvämt lån att hantera. Detta innebär ett <a href="https://lastoffer.net/enkla-lanet/">enklare lån</a> en smidigare hantering ger dig också möjlighet att sänka dina totala kostnader.</p>
@@ -823,7 +823,7 @@ button.bleu {
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med hopbakslån</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Vad är positivt med ett hopbakslån med låg ränta?"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Vad är positivt med ett hopbakslån med låg ränta?"></p>
 <ol>
 <li><strong>Minskade månadskostnader:</strong> Genom att slå samman flera lån och krediter till ett hopbakslån med låg ränta, kan du sänka din totala månadskostnad, vilket frigör mer utrymme i din budget.</li>
 <li><strong>Bättre översikt över ekonomin:</strong> Ett hopbakslån samlar dina skulder på ett ställe, vilket ger dig en tydligare översikt över dina utgifter och gör det lättare att planera din ekonomi.</li>
@@ -841,7 +841,7 @@ button.bleu {
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med ett hopbakslån</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Vad är negativt med ett hopbakslån med låg ränta?"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Vad är negativt med ett hopbakslån med låg ränta?"></p>
 <ol>
 <li><strong>Risk för längre återbetalningstid:</strong> Ett hopbakslån kan förlänga din totala återbetalningstid, vilket innebär att du kan betala mer i ränta över tid, trots en lägre månadsbetalning.</li>
 <li><strong>Kan leda till högre skuldsättning:</strong> Om du inte ändrar dina spenderingsvanor efter att ha samlat dina skulder, kan du riskera att återigen samla på dig nya skulder, vilket förvärrar din ekonomiska situation.</li>
