--- a/hur-valjer-man-ratt-langivare/index.html
+++ b/hur-valjer-man-ratt-langivare/index.html
@@ -178,7 +178,7 @@ Publicerat i <a href="https://lastoffer.net/category/hjalp-tips/">hjälp &amp; t
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2023/10/Hur-valjer-man-ratt-langivare..webp" alt="Hur väljer man rätt långivare?" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2023/10/Hur-valjer-man-ratt-langivare.webp" alt="Hur väljer man rätt långivare?" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -684,7 +684,7 @@ button.bleu {
 <h2>
 <div class="unskew">Få hjälp med rätt långivare</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring: Hur väljer man rätt långivare?"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring: Hur väljer man rätt långivare?"></p>
 <p>    Att ta steget till att <a href="https://lastoffer.net/ansokningsprocess/">ansöka om lån</a> kan vara både spännande och skrämmande.  I en värld där ekonomiska behov ständigt förändras är det viktigt att utrusta sig med kunskap innan du gör ett val. </p>
 <p> När du ställs inför frågan om hur du ska finansiera ett projekt eller en investering är det avgörande att hitta en långivare som passar just dina behov.     Marknaden för lån är inte bara omfattande, utan också full av detaljer som kan vara förvirrande. </p>
 <p> Med ett växande antal långivare och låneprodukter är det lätt att känna sig överväldigad.  Därför är det av stor vikt att granska och jämföra alternativ innan du rättar dig efter någon specifik aktör. </p>
@@ -765,7 +765,7 @@ button.bleu {
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med att välja rätt långivare?</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Positivt med att välja rätt långivare"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Positivt med att välja rätt långivare"></p>
 <ul>
 <li>Ökad ekonomisk säkerhet: Att välja rätt långivare ger dig den trygghet du behöver för att hantera dina ekonomiska behov utan att oroa dig för dolda avgifter eller ogynnsamma villkor. Det kan skapa stabilitet och befria dig från stress kopplad till ekonomiska åtaganden.</li>
 <li>Bättre lånevillkor: Genom att jämföra olika långivare kan du hitta de mest fördelaktiga räntorna och avgifterna som passar din ekonomiska situation. Detta kan leda till betydande besparingar över tid, vilket gör att du kan fokusera på andra viktiga utgifter.</li>
@@ -783,7 +783,7 @@ button.bleu {
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med Hur väljer man rätt långivare?</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Negativt med att välja rätt långivare"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Negativt med att välja rätt långivare"></p>
 <ul>
 <li>Skuldsättningsrisk: Att ta lån innebär att du åtar dig en skuld som måste betalas tillbaka. Om du inte hanterar lånet väl kan det leda till en ond cirkel av skuldsättning som blir allt svårare att bryta.</li>
 <li>Dolda avgifter: Vissa långivare kan inkludera dolda avgifter i sina kontrakt, vilket kan öka den totala kostnaden för lånet. Utan noggrann genomläsning av lånevillkoren riskerar du att hamna i en situation där du betalar mer än vad du förväntade dig.</li>
